chore: some changes and updates

--- a/docs/cs/organization/1.md
+++ b/docs/cs/organization/1.md
@@ -1,80 +1,68 @@
 ---
-title: 走进计算机体系
+title: 走进计算机
 category: 计算机基础
 author: JQiue
 ---
+
+组成到底是学什么呢？其实有点像装电脑
+
+## 电脑的基本硬件组成
+
+电脑必须要有三大件，CPU、内存和主板
+
+CPU 是电脑中最核心的硬件，它的全名叫做中央处理器（Central Processing Unit），电脑中所有的计算都是交给 CPU 进行的，同时 CPU 几乎是整个电脑中造价最贵的一部分
+
+第二个是内存（Memory），打开的程序，浏览器，游戏，都要加载到内存中去才能运行，内存越大，放的东西越多，而 CPU 就是通常处理内存中数据，但是 CPU 不能直接插到内存上
+
+主板提供了 CPU 和内存连接的通道，主板是一个有各种各样插槽的配件，CPU 和内存都需要插到主板上，主板的芯片组和总线解决了 CPU 和内存之间如何通信的问题，芯片组控制了数据传输的流转，总线是数据传输的通道
+
+当有了这三大件，只要配上电源供电，计算机就可以运行起来了，但是还缺少一些输入输出设备，也就是 I/O 设备，比如没有显示器就看不到计算机输出的图像、文字等信息，这就是所谓的输出设备。鼠标键盘也不能少，这样才能像计算机中输入数据，它们也就是所谓的输出设备
+
+最后可能需要一个硬盘，这样数据才能够永久的保存下来，且大部分人都会使用机箱，装上风扇，解决灰尘和散热问题，不过它们都不是计算机的必备硬件，也就是说拿鞋盒当机箱都没有问题
+
+如果想要打游戏，可能还需要配上显卡，显卡也是必不可少的，虽然绝大部分主板自带显卡，但是如果要玩游戏，或者做深度学习，多半就要买一张独立的显卡插在主板上，显卡也里有一个处理器，也就是 GPU，它也可以做运算
+
+## 冯诺依曼体系结构
+
+虽然一台电脑就这么组装起来了，但是平常使用的智能机也是这样的吗？
+
+手机由于体积原因，并没有什么所谓的 CPU 插槽和内存插槽这些东西，所以手机制造商将这些东西都封装到一个芯片里，然后嵌入手机的主板上，这种方式叫做 SoC（System on a Chip），这样看来个人电脑和手机可能组成方式不太一样，但是程序的运行方式没什么区别，都是将程序加载到内存中执行。这是因为个人电脑，手机等设备都遵循着一个概念，即冯诺依曼体系结构，也叫存储程序计算机
+
+它有两种概念，一个是“可编程”，一个是“存储”
+
+计算机是由各种门电路组成的，通过组装成一个电路板，来完成特定的程序，一旦需要修改程序，就必须重新组装电路，这样的计算就就是不可编程的，因为程序在硬件层面上被写死了，比如计算器，他只能做加减乘除，做不了任何计算逻辑固定之外的事，如果将程序本身存储在内存中，然后通过加载不同的程序来解决不同的问题，那么就实现了可编程
+
+冯诺依曼体系结构即**将程序指令和数据一起存储的计算机设计概念结构**，早期计算机只能运行固定用途的程序，改变程序必须更改结构，重新设计电路，在当时重启程序并不像现在重新编译一样简单，这就导致计算机非常局限，于是冯诺依曼提出了将程序存储起来，并设计通用的电路，运行程序的时候，把程序当成电路能够理解的语言，然后让通用电路执行相关的逻辑，这就是冯诺依曼体系的核心概念：**存储程序指令，并设计通用电路**
+
+::: tip 现代计算机结构
+现代计算机结构从本质上来讲还是冯诺依曼结构，但是对原有的结构进行了改变来解决冯诺依曼原有结构 CPU 和存储设备之间的性能差异，在这个结构中，存储器，运算器，控制器在一个结构上面，现在计算机的结构可以理解为**以存储器为核心的结构**
+:::
 
 ## 第一台通用计算机的诞生
 
 ENIAC 是 1946 年在美国宾夕法尼亚大学制成的，但实际上真正意义上的第一台计算机是阿塔纳索夫-贝瑞计算机，ENIAC 发明者是从阿塔纳索夫继承了电子数字计算机的主要设计构想，因此阿塔纳索夫-贝瑞计算机是世界上第一台计算机，而 ENIAC 是通用的第一台电子数字计算机，因为 ENIAC 是可编程的计算机
 
-<div align="center"><img src="https://gitee.com/jqiue/img_upload/raw/master/images/firstcomputer.jpg"/></div>
-
-从使用器件的角度来看，计算机的发展经历了五代的变化
-
-+ 1946~1957 年，**电子管计算机**，集成度小，空间占用大，功耗高，运行速度慢，操作复杂，更换程序需要接线
-
-+ 1958~1964 年，**晶体管计算机**，集成度相对电子管较高，空间占用小，功耗相对较低，运行速度较快，操场相对简单，交互更加方便
-
-+ 1965~1980 年，**集成电路与大规模集成电路计算机**，计算机变得更小，功耗变得更低，计算速度更快，这个时候计算机具备了进入千家万户的条件，开始有了操作系统的诞生
-
-+ 1981年至今，**超大规模集成电路计算机**，一个芯片集成了上百万的晶体管，速度更快，体积更小，价格更低，用途丰富，更能被大众接受
-
-+ 第五个阶段：**未来的计算机**，以蛋白质分子作为主要原材料的生物计算机，具有生物级别的自动修复，不受信号干扰，以及遵循量子力学的量子计算机
-
-::: tip 量子计算机
-2013 年 5 月，谷歌和 NASA 发布 D-Wave Two，2017 年 5 月，中国科学院制造出光量子计算机，2019 年 1 月，IBM 展示了世界首款商业化量子计算机，包括一些企业也开始了研究，腾讯组建了量子实验室，阿里巴巴成立了达摩院。量子计算机使用了“量子比特”（qubit）来替代了 1 和 0 的数字比特，甚至是 0 和 1 的叠加态
+::: center
+<img src="https://gitee.com/jqiue/img_upload/raw/master/images/firstcomputer.jpg"/>
 :::
 
 ## 计算机的分类
 
-计算机分为两大类：
++ 电子模拟计算机：模拟计算机是通过电压来表示数据，并用盘上连线控制，它的精度较低，存储量较小，没有逻辑判断能力，而数字计算机通过数字 0 和 1 表示，并通过程序来控制，它的精度非常高，存储量非常大，逻辑判断能力也非常强
 
-1. 电子模拟计算机：类似于“模拟”的方式，比如时钟用指针在表盘上转动来表示时间，电表用角度来表示电量大小
-2. 电子数字计算机：它是用数字来表示数量的大小，主要的特点是按位运算，并且不连续地跳动计算。
-
-模拟计算机是通过电压来表示数据，并用盘上连线控制，它的精度较低，存储量较小，没有逻辑判断能力，而数字计算机通过数字 0 和 1 表示，并通过程序来控制，它的精度非常高，存储量非常大，逻辑判断能力也非常强
-
-电子数字计算机是现在最主流的计算机，通常也被称为电脑或者电子计算机，且可以进一步分为专用计算机和通用计算机，**它们是根据计算机的效率、速度、价格、运行的经济性和适应性来划分的**
++ 电子数字计算机：电子数字计算机是现在最主流的计算机，通常也被称为电脑或者电子计算机，且可以进一步分为专用计算机和通用计算机，**它们是根据计算机的效率、速度、价格、运行的经济性和适应性来划分的**
 
 专业计算机是最有效，最经济和最快速的计算机，但是他的适应性很差，通用计算机适应性很强，但是牺牲了效率，速度和经济型，通用计算机又可以分为超级计算机，大型机，服务器，PC 机，单片机和多核机，他们的区别在于体积，简易性，功耗，性能，数据存储容量，指令系统规模和机器价格
 
-<div align="center"><img src="https://gitee.com/jqiue/img_upload/raw/master/images/计算机1.1.png"/></div>
+::: center
+<img src="https://gitee.com/jqiue/img_upload/raw/master/images/计算机1.1.png"/>
+:::
 
-### 个人计算机
++ 个人计算机：通常对个人用户来讲提供良好的性能，且价格低廉
 
-通常对个人用户来讲提供良好的性能，且价格低廉
++ 服务器：为多用户运行大型程序的计算机，执行大负载任务，通常是多个用户并行访问，提供比个人计算机更强的性能以及更加可靠的稳定性。低端服务器一般用于商务应用或者 Web 服务，而高端服务器又叫做**超级计算机**，常用于科学计算，这类计算机代表着最高价格以及最高的计算性能，但在整个计算机市场中占用的比例较少，跟个人计算机比起来，当前民用最强 CPU 连超算的十分之一都赶不上，可谓差距之大
 
-### 服务器
-
-服务器用于为多用户运行大型程序的计算机，执行大负载任务，通常是多个用户并行访问，提供比个人计算机更强的性能以及更加可靠的稳定性。低端服务器一般用于商务应用或者 Web 服务，而高端服务器又叫做**超级计算机**，常用于科学计算，这类计算机代表着最高价格以及最高的计算性能，但在整个计算机市场中占用的比例较少，跟个人计算机比起来，当前民用最强 CPU 连超算的十分之一都赶不上，可谓差距之大，对于超级计算机也是有一个算力排名的：
-
-名字|制造商|处理器|峰值速度
----|---|---|---
-富岳|日本|7299072|513,854.7 Tflops/s
-顶点|美国|2414592|200,794.9 Tflops/s
-Sierra|美国|1572480|125,712.0 Tflops/s
-神威太湖之光|中国|10649600|125,435.9 Tflops/s
-天河2号|中国|4981760|100,678.7 Tflops/s
-
-> 资料来源：<https://zh.wikipedia.org/wiki/TOP500>
-
-### 嵌入式计算机
-
-嵌入式计算机是数量最多的一类，常用于汽车，电视、控制飞机等设备的处理器，它的设计目标是运行单一的应用程序，对成本和功耗有严格限制，必须快速的执行有限功能，且必须保证正常运转
-
-## 计算机系统中的 8 个思想
-
-这些思想贯穿了整个计算机的设计
-
-+ 摩尔定律：单芯片上的集成度每 18 ~ 24 个月翻一番
-+ 抽象简化：抽象简化提高硬件的生产效率
-+ 加速大概率事件：提高一些经常发生的事件处理效率
-+ 通过并行提高性能：同时执行多个任务
-+ 通过流水线提高性能：特殊的并行场景
-+ 通过预测提高性能：通过一些代价不高的执行来提前开始某些操作
-+ 存储器层次：速度影响性能，容量限制问题的规模，将较快的存储器放在顶层解决速度，将速度慢，容量大的存储器放在底层解决容量
-+ 通过冗余提高可靠性：物理器件可能会失效，使用冗余部件提高系统的可靠性，用双轮胎卡车理解（其中一个轮胎出问题时，也可以工作）
++ 嵌入式计算机：是数量最多的一类，常用于汽车，电视、控制飞机等设备的处理器，它的设计目标是运行单一的应用程序，对成本和功耗有严格限制，必须快速的执行有限功能，且必须保证正常运转
 
 ## 程序概念
 
@@ -82,47 +70,15 @@ Sierra|美国|1572480|125,712.0 Tflops/s
 
 ### 系统软件
 
-系统软件提供操作系统、编译程序、加载程序、汇编程序等，对于现代计算机系统来说，**操作系统**和**编译程序**是必须的。
+系统软件提供操作系统、编译程序、加载程序、汇编程序等，对于现代计算机系统来说，**操作系统**和**编译程序**是必须的。操作系统是用户程序和硬件之间的接口，提供了基本的输入和输出，分配内外存，为应用程序提供计算机资源的操作
 
-操作系统是用户程序和硬件之间的接口，提供了基本的输入和输出，分配内外存，为应用程序提供计算机资源的操作
-
-编译程序用于将高级语言编写的程序翻译成硬件能够执行的指令，对于计算机来说最简单的信号是“通”和”断“，所以计算机用两个符号 0 和 1 表示。也因此计算机的语言通常被称之为**二进制数**，每个符号就是一个**二进制位**或**一位**（bit），而计算机指令就是一个个二进制位组成的位串。
+编译程序用于将高级语言编写的程序翻译成硬件能够执行的指令，对于计算机来说最简单的信号是“通”和”断“，所以计算机用两个符号 0 和 1 表示。也因此计算机的语言通常被称之为**二进制数**，每个符号就是一个**二进制位**或**一位**（bit），而计算机指令就是一个个二进制位组成的位串
 
 ### 转向高级语言
 
-最初程序员是通过二进制来和计算机打交道的，由于二进制太过难以理解，它们很快发明了助记符，最初助记符是手工翻译成二进制，后来开发了一种**汇编程序**，将助记符自动翻译成对应的二进制，这种符号语言又叫**汇编语言**，而计算机理解的二进制语言叫**机器语言**。
+最初程序员是通过二进制来和计算机打交道的，由于二进制太过难以理解，它们很快发明了助记符，最初助记符是手工翻译成二进制，后来开发了一种**汇编程序**，将助记符自动翻译成对应的二进制，这种符号语言又叫**汇编语言**，而计算机理解的二进制语言叫**机器语言**
 
 后来人们意识到可以编写一个能够将接近人类语言翻译成计算机指令的程序，于是就设计了高级语言的编译程序，使用高级编程语言大大提高了软件的开发效率，这些高级语言由一些单词和代数符号组成，可以由编译器转换成汇编语言，再由汇编器转换成机器语言交给计算机执行
-
-## 硬件概念
-
-组成计算机的经典部件是输入、输出、存储器、数据通路（也叫运算器）和控制器，后两个部件通常合称为处理器
-
-### 输入
-
-常见的输入设备有：键盘、鼠标、扫描仪、触摸板、触摸屏等，它们将用户的指令发送给计算机
-
-### 输出
-
-常见的输出设备有：显示器，打印机，音响等，他们将计算机的处理结果发送给用户
-
-### 存储器
-
-能够长期的记忆程序、数据、中间结果以及最终运算结果的设备
-
-### 处理器
-
-处理器是计算机中的最活跃的部分，能够处理数据，并按结果发出控制信号使 I/O 设备动作等，运算器使处理器中执行运算操作的部分，控制器根据程序的指令指挥运算器、存储器和 I/O 设备
-
-## 计算机的体系与结构
-
-### 冯诺依曼体系
-
-冯诺依曼体系结构即**将程序指令和数据一起存储的计算机设计概念结构**，早期计算机只能运行固定用途的程序，改变程序必须更改结构，重新设计电路，在当时重启程序并不像现在重新编译一样简单，这就导致计算机非常局限，于是冯诺依曼提出了将程序存储起来，并设计通用的电路，运行程序的时候，把程序当成电路能够理解的语言，然后让通用电路执行相关的逻辑，这就是冯诺依曼体系的核心概念：**存储程序指令，并设计通用电路**
-
-### 现代计算机结构
-
-现代计算机结构从本质上来讲还是冯诺依曼结构，但是对原有的结构进行了改变来解决冯诺依曼原有结构 CPU 和存储设备之间的性能差异，在这个结构中，存储器，运算器，控制器在一个结构上面，现在计算机的结构可以理解为**以存储器为核心的结构**
 
 ## 计算机的性能
 
@@ -138,53 +94,44 @@ Sierra|美国|1572480|125,712.0 Tflops/s
 + 吞吐率：指单位时间内完成的任务数量
 :::
 
-一般将处理器更换为更高速的型号既会减少响应时间也会增加吞吐率，但只增加处理器数量只会增加吞吐率，所以评价计算机性能主要考虑响应时间
+因此想要增加计算机的性能，就要减少响应时间，增加吞吐率，但是通常减少响应时间也提升了吞吐率
 
-### 性能的度量
-
-对于计算机来说都可以用时钟来驱动硬件中发生的各种事件，时钟间隔的时间称为时钟周期，它的倒数称之为时钟频率
-
-### CPU 性能及其因素
-
-性能的度量实际上是针对 CPU 的执行时间，下面是一个简单公式：
+一般将性能定义为响应时间的倒数：
 
 ::: center
-一个程序的 CPU 执行时间 = 一个程序的 CPU 时钟周期数 * 时钟周期时间
+性能 = 1 / 响应时间
 :::
 
-由于时钟频率和时钟周期互为倒数，即可得：
+响应时间越短，性能数值越大，如果一个程序在处理器 A 上需要 6s 完成，而在处理器 B 上需要 3s 完成，根据公式算出，A 的 性能是 1/6，而 B 的性能是 1/3，A 和 B 的性能比为 2，那么就说明 B 的性能是 A 的两倍
+
+时间虽然能够衡量性能，但有两个问题：
+
++ 时间不准：因为一个程序不一定每次运行时间是一样的，因为 CPU 实际上在各个程序之间切换
++ CPU 性能：CPU 可能满载运行，也可能降频运行，导致时间有所差异
+
+所以因该对 CPU 时间进行拆解，将执行时间变成时钟周期数和时钟周期时间的乘积：
 
 ::: center
-一个程序的 CPU 执行时间 = 一个程序的 CPU 时钟周期数 / 时钟频率
+程序的 CPU 执行时间 = CPU 时钟周期数 * CPU 时钟周期时间
 :::
 
-### 指令的性能
+时钟周期时间就是 CPU 主频，比如 AMD 3200G 的主频是 3.6GHz，可以简单粗暴的理解为，CPU 在 1 秒内执行的指令是 3.6G条，CPU 内部是由晶振驱动的，类似于墙上的挂钟，“滴答滴答”一秒一秒的走，通过挂钟就能识别出来最小的单位是秒。而 CPU 每一次的震荡时间就是时钟周期时间，只要这个主频越高就代表它走的越快，因此最简单的性能提升方式就是缩短时钟周期时间，但是对于人磊说这个操作相当于更换了 CPU，因此将目光瞄向了时钟周期数，如果能减少程序需要的时钟周期数，一样能够提升性能
 
-由于计算机是通过执行指令来运行程序的，所以执行时间依赖于程序中的指令数，因此一个程序需要的时钟周期可为：
+对于周期数来，受到程序的指令数影响较大，所以可以进一步拆解成“指令数 * 每条指令的平均时钟周期数”，简称 CPI，这样上面的公式就变成了：
 
 ::: center
-CPU 时钟周期数 = 程序的指令数 * 每条指令的平均时钟周期数
+程序的 CPU 执行时间 = 指令数 * CPI * CPU 时钟周期时间
 :::
 
-通常使用 CPI（clock cycle per instruction）表示执行每条指令所需的时钟周期数的平均值，不同的指令需要的时间可能不同，CPI 是一个程序全部指令所用时钟周期的平均值，现在可用指令数、CPI 和时钟周期时间来写出基本的性能公式：
+除了优化这些东西来提升性能，还可以将一个芯片集成多个 CPU 来提升性能，所以就出现了向单核处理器向多核处理器的转变
 
-::: center
-CPU 时间 = 指令数 * CPI * 时钟周期时间  
-or  
-CPU 时间 = 指令数 * CPI / 时钟频率
-:::
+## 功耗墙
 
-也有一种用 MIPS 取代时间以度量性能的方法：
+对于 CPU 来说，只要在 CPU 多放一些晶体管，提高时钟频率就能够让它更快，但是对于 CPU 来说是有功耗上限的，因为同一个体积的性能提升是有限的，仅仅通过堆硬件的方式，在如今不能够满足对程序性能的需求了，所以需要从以下几个方面入手：
 
-::: center
-MIPS = 指令数 / (执行时间 * 10^6^)
-:::
-
-从表面上来看 MIPS 既容易理解，又符合人的直觉，但用 MIPS 作为指标存在几个问题，这导致 MIPS 的变化是与性能无关的
-
-## 从单处理器向多处理器转变
-
-由于 CPU 的发展，CPU 的功耗达到了极致，再也无法将处理器冷却下来，迫使处理器的设计发生了巨大的改变，芯片制造商开始在单片中加入多个处理器，以求更大的吞吐率，而不再追求降低单个程序运行在单个处理器的响应时间
++ 加速大概率事件
++ 通过流水线提高性能
++ 通过预测提高性能
 
 ## 计算机的计算单位
 
