--- a/docs/cs/organization/2.md
+++ b/docs/cs/organization/2.md
@@ -4,13 +4,23 @@ category: 计算机基础
 author: JQiue
 ---
 
-要想计算机听从指挥，就必须使用计算机的语言，计算机语言的基本单词称为**指令**，一台计算机的全部指令称为该计算机的**指令集**。指令在计算机内部是以若干个或高或低的电信号的序列表示的，并且形式上和数的表示相同，指令的各部分都可看成一个独立的数，将这些数拼接在一起就形成了指令。而指令的数字形式就是**机器语言**，这样的指令序列叫做**机器码**。
+要想计算机听从指挥，就必须使用计算机的语言，早期的计算机指令是通过打孔带编写的，因为当时的计算机不能够理解数字信号，到如今计算机也只能理解所谓的机器码，比如 0 和 1 组成的指令。
+
+从硬件角度来看，CPU 就是一个超大规模集成电路，通过电路实现了加法，乘法各种处理逻辑
+
+从软件角度来看，CPU 就是一个执行各种计算机指令的逻辑机器，这里的计算机就是机器语言
+
+但是，不同的 CPU 能听懂的语言不一样，它们各自支持的语言就是两种不同的计算机指令集，所以在电脑上写的程序，复制粘贴到手机上肯定没法运行的。但是如果复制到另一个电脑就能够运行，因为这两台电脑的 CPU 有相同的指令集
 
 ::: tip 机器语言
 二进制表示形式
 :::
 
-## 机器指令的形式
+## 从高级语言转向低级语言
+
+对于高级语言来说，通常需要编译器翻译成汇编语言，然后通过汇编器翻译成机器语言来交给计算机执行，这是一个日常开发程序的过程
+
+## 指令的形式
 
 机器指令主要由两部分组成：操作码和地址码
 
@@ -26,13 +36,17 @@ author: JQiue
 
 ## 机器指令的操作类型
 
-不同的机器指令系统是各不相同的
+对于 CPU 来说，可以使用的指令很多，但大致可以分为五大类：
 
-+ 数据传送：寄存器之间、寄存器与存储单元、存储单元之间的数据传送，数据的读写、交换地址数据、清零置一等操作
-+ 算数运算：操作数之间的加减乘除运算，与或非运算，移位运算等
-+ 控制指令：等待指令、停机指令、空操作指令、中断指令等
++ 算术类：加减乘除在 CPU 层面，都会变成一条条算术指令
++ 数据传输类：赋值变量，读写数据都是数据传输类指令完成的
++ 逻辑类：与或非
++ 条件分支类：if/else
++ 无条件跳转类：函数或者方法
 
-## 机器指令的寻址方式
+不同的 CPU 有不同的指令集，也就对应着不同的汇编语言和不同的机器码
+
+## 寻址方式
 
 存储器即可以存放数据，又可以存放指令，其在存储单元中的编号就是地址。
 
