--- a/docs/language/c/6.md
+++ b/docs/language/c/6.md
@@ -1,116 +1,65 @@
 ---
-title: 函数
+title: 指针
 category: 编程语言
 tag: C
-time: 2019-03-07
+time: 2019-03-08
 author: JQiue
 ---
 
-C 语言源程序是由函数组成的，一个程序中有且只有一个主函数`main()`，它是程序的入口和出口，但实际上程序往往由多个函数组成，由主函数调用其他函数，其他函数也可以互相调用，函数是源程序的基本模块，C 语言的函数本质是一个复合语句，用来执行一个语句序列。C 语言虽然提供了大量的库函数，但是仍然满足不了一些开发中的逻辑，这就需要用户自定义函数的功能
+指针是 C 语言的灵魂，也可以说指针就是 C 语言的门面，指针简单来说就是一种特殊的变量，和普通变量不同的是，指针变量存储的是另一个变量的地址，而普通变量存储的只是一个实际的值，站在内存的角度来看，通过地址就能访问数据，那么指针也就能间接访问某个变量中的数据
 
-## 函数的定义
-
-```text
-返回值类型 函数名(形参)
-{
-  执行的语句;
-  ...
-  return 返回值;
-}
-```
-
-下面是一个实例：
+定义一个指针变量和定义一个普通变量一样，只不过前面要加上`*`来表示它是一个指针变量，当然指针也是具有类型的，不同类型的变量要用不同的类型的指针
 
 ```c
-int function(){
-  return 0;
-}
+int *p;
 ```
 
-C 语言不允许函数嵌套定义，但是可以声明，函数定义要有一定的顺序关系才能正确的调用
+指针变量有了，那么如何取出其他变量的地址呢？
 
-## 函数的调用
-
-在 C 语言中，只有函数被调用的时候，函数体定义的功能才会执行
-
-调用格式：函数名(实参1, 实参2, ...);
+通过`&`运算符就可以取出某个变量的地址，将地址赋值给指针变量就行了
 
 ```c
-int function(){
-  printf("自定义函数被调用了");
+int *p;
+int a = 3;
+p = &a; // 取出变量a的地址交给指针p
+```
+
+::: tip
+& 运算符的操作数必须是变量，取出来的地址大小取决于编译器和系统架构
+:::
+
+这个指针已经指向了那个变量，就可以通过`*`运算符来访问数据
+
+```c
+printf("%d", *p); // 通过指针访问上述code中变量存储的数据
+printf("%d", a); // 它和指针访问是等效的
+```
+
+::: tip
+定义变量时的`*`和表达式中的`*`是不同的
+:::
+
+## 指针的运算
+
+指针变量的运算实际上是地址的运算，C 语言规定一个地址加上或减去一个整数 n，其运算结果仍然是一个地址
+
+## 数组与指针
+
+数组本身就表达地址，因此数组的地址不需要用`&`取出，但数组的元素表达的是变量，需要使用取地址符
+
+因此`[]`运算符可以对数组变量做，也可以对指针变量做
+
+如果把一个数组当作参数传递给一个函数，这个函数接收的也是一个指针，所以要定义指针变量接收
+
+```c
+int foo(int *arr){
   return 0;
 }
 int main(){
-  function(); // 在主函数中调用 function
-  return 0;
-}
-```
-
-## 有参和无参
-
-在函数中不需要定义参数的叫无参函数，反之叫有参函数，唯一的区别就是`()`中多了一个参数列表，有参函数相对来说比较灵活
-
-```c
-int foo(){}; // 无参
-int bar(int a){}; // 有参
-```
-
-## 形参和实参
-
-+ 形参只有在被调用时才分配内存单元，在调用结束时，即刻释放所分配的内存单元。因此，形参只有在函数内部有效。函数调用结束返回主调函数后则不能再使用该形参变量
-+ 实参可以是常量、变量、表达式、函数等，无论实参是何种类型的量，在进行函数调用时，它们都必须具有确定的值，以便把这些值传送给形参。因此应预先用赋值等办法使实参获得确定值
-
-在参数传递时，实参和形参在**数量上**，**类型上**，**顺序上**应严格一致，否则会发生”类型不匹配”的错误
-
-## 返回值
-
-返回值指的是函数调用完毕后，返回给调用者的值，且返回值的类型必须与函数声明的类型相同，当执行到`return`语句时，就会结束函数的执行返回结果给调用者
-
-```c
-int add(int a, int b){
-  return a + b;
-}
-int main(){
-  int result = add(1, 3); // 函数执行完毕返回结果，将结果赋值给 result
-  return 0;
-}
-```
-
-## 函数的声明和原型
-
-在原则上，函数定义要在函数调用之前，但实际上往往会在定义之前调用函数，这个时候就需要提前声明，用来告诉编译器：没有找到定义不要紧，我的函数定义会在后面补上
-
-提前声明只需要去掉函数体，并在后面加上`;`，声明时可以不写形参，只写数据类型
-
-声明的这个函数就是函数原型，用于告诉编译器与该函数的有关信息
-
-当有了函数声明，函数定义可以出现在任何地方，甚至是其他文件静态链接库，动态链接库等
-
-```c
-int add(int a, int b);
-int main(){
-  add(1, 2);
-  return 0;
-}
-int add(int a, int b){
-  return a + b;
-}
-```
-
-## 全局变量和局部变量
-
-函数的每次运行，就会产生一个独立的变量空间，在这个空间的变量，是函数独有的，连形参都是局部变量，外界无法访问
-
-而定义在函数外面的变量就是全局变量，在整个程序中都可以访问
-
-```c
-int x = 2;  // 全局变量，任何地方都能访问
-void foo(){
-  int y = 3;  // 局部变量，main不能访问，只能在该代码块中访问
-  printf("%d%d", x, y);
-}
-int main(){
-  printf("%d", x);
+  int arr[3] = {1, 2, 3};
+  int *p;
+  p = arr; // 数组名即指针地址
+  foo(arr); // 接收数组时，需要在函数中定义指针变量接收
   return 0;
 }
 ```
