--- a/docs/language/python/2.md
+++ b/docs/language/python/2.md
@@ -347,7 +347,7 @@ sayHello()
 
 函数也不是从天而降的，必须先定义后使用，包括 Python 内置的函数都是人为定义的，只是供开发者调用而已，由于 Python 的解释器是从上到下依次执行的，所以函数的声明必须写在调用前面，否则会发生错误
 
-## 函数的参数
+### 函数的参数
 
 如果有一个函数功能是实现**两个数字的求和**
 
@@ -376,7 +376,7 @@ sum(1, 1)
 + 形参：定义函数时定义的变量就叫形参
 + 实参：调用函数时传入的数据就叫实参
 
-## 函数的返回值
+### 函数的返回值
 
 返回值是函数返回给调用者的一个值，也就是函数执行接收返回的结果，在 Python 中通过关键字`return`来返回结果
 
@@ -392,6 +392,6 @@ print(sum(1, 1))
 当函数中执行到`return`关键字时整个函数会立即结束，不会执行后续的代码
 :::
 
-## 函数和方法的区别
+### 函数和方法的区别
 
 函数和方法本质上是一个东西，都是封装了独立的功能模块，区别在于方法是针对某个对象做的操作，通过`.`来调用
