--- a/docs/language/python/9.md
+++ b/docs/language/python/9.md
@@ -34,14 +34,14 @@ file = open(文件路径, 操作模式)
 
 ## 读文件
 
-read 方法读取文件中所有的数据并返回字符串，可以指定参数来决定读取的长度
-readline 方法单行读取并将指针向下移动，并返回字符串
-readlines 方法读取全部行的内容，将每一行作为一个元素的列表返回
++ read()：读取文件中所有的数据并返回字符串，可以指定参数来决定读取的长度
++ readline()：方法单行读取并将指针向下移动，并返回字符串
++ readlines()：方法读取全部行的内容，将每一行作为一个元素的列表返回
 
 ## 写文件
 
-write 方法写入字符串并返回字符串长度
-writelines 方法写入可迭代类型（元素必须是字符串类型）
++ write()：写入字符串并返回字符串长度
++ writelines()：方法写入可迭代类型（元素必须是字符串类型）
 
 ## 关闭文件
 
@@ -55,8 +55,8 @@ file.close()
 
 文件的读写操作都是依靠指针定位的，随着文件的不断操作，指针位置会不断的改变
 
-tell() 方法来获取当前指针在文件中的位置
-seek(offset, whence) 方法来重新定位指针，offset 定义偏移量，whence 定义偏移的位置，为 0 表示从头开始，为 1 表示从当前位置开始，为 2 表示从结尾开始
++ tell()：来获取当前指针在文件中的位置
++ seek(offset, whence)：重新定位指针，offset 定义偏移量，whence 定义偏移的位置，为 0 表示从头开始，为 1 表示从当前位置开始，为 2 表示从结尾开始
 
 ::: tip whence 取值
 如果取值不为 0，则应该使用二进制文件打开，否则会报错
