--- a/docs/web/vue/1.md
+++ b/docs/web/vue/1.md
@@ -27,13 +27,13 @@ author: JQiue
 let app = new Vue();
 ```
 
-仅仅创造一个对象还不够，因为Vue需要你告诉他将页面中哪一部分元素作为Vue实例解析，因此这个构造函数需要接受一个对象，这个对象包含着页面上的信息，其中的键值对是有要求的
+仅仅创造一个对象还不够，因为 Vue 需要你告诉他将页面中哪一部分元素作为 Vue 实例解析，因此这个构造函数需要接受一个对象，这个对象包含着页面上的信息，其中的键值对是有要求的
 
 ```html
 <div id="app"></div>
 ```
 
-假设以上元素需要交给Vue管理，则通过对象中的`el`属性将页面`id`为`app`的元素交给Vue管理
+假设以上元素需要交给 Vue 管理，则通过对象中的`el`属性将页面`id`为`app`的元素交给 Vue 管理
 
 ```javascript
 let app = new Vue({
@@ -41,7 +41,7 @@ let app = new Vue({
 });
 ```
 
-虽然DOM已经交给了Vue，但Vue毕竟是一个渲染数据的框架，因此可以通过对象中的`data`属性交给Vue渲染
+虽然 DOM 已经交给了 Vue，但 Vue 毕竟是一个渲染数据的框架，因此可以通过对象中的`data`属性交给 Vue 渲染
 
 ```javascript
 let app = new Vue({
@@ -52,14 +52,14 @@ let app = new Vue({
 });
 ```
 
-这样就够了吗？当然还没有，还需要告诉Vue在Dom中哪个位置渲染`data`中的数据
+这样就够了吗？当然还没有，还需要告诉 Vue 在 DOM 中哪个位置渲染`data`中的数据
 
 ```javascript
 <div id="app">{{msg}}</div>
 ```
 
-你可能会好奇`{{}}`这到底是个啥？这个东西就是用来帮助将`data`中的数据渲染到页面中，请详见[模板语法](/code/front/vue/2)，这时候页面就会显示：
+你可能会好奇`{{}}`这到底是个啥？这个东西就是用来帮助将`data`中的数据渲染到页面中，请详见[模板语法](/web/vue/2)，这时候页面就会显示：
 
 `你好，Vue`
 
-至此一个Vue项目就已经完成了！！！
+至此一个简单 Vue 项目就已经完成了！！！
