--- a/docs/language/js/1.md
+++ b/docs/language/js/1.md
@@ -1,46 +1,50 @@
 ---
-title: 语法
+title: 基本语法
 category: 编程语言
 tag: JavaScript
 time: 2020-3-5
 author: JQiue
 ---
 
-熟悉 Java、C 和 Perl 这些语言的开发者会发现 ECMAScript 的语法很容易掌握，因为它借用了这些语言的语法。
+本章介绍 JavaScript 中的基本语法
 
-Java 和 ECMAScript 有一些关键的语法特性相同，也有一些完全不同。
-
-### 区分大小写
-
-与 Java 一样，变量、函数名、运算符以及其他一切东西都是区分大小写的。
-
-比如：
-
-变量 test 与变量 TEST 是不同的。
-
-### 变量是弱类型的
-
-与 Java 和 C 不同，ECMAScript 中的变量无特定的类型，定义变量时只用 var 运算符，可以将它初始化为任意值。
-
-因此，可以随时改变变量所存数据的类型（尽量避免这样做）。
-
-### 每行结尾的分号可有可无
-
-Java、C 和 Perl 都要求每行代码以分号（;）结束才符合语法。
-
-ECMAScript 则允许开发者自行决定是否以分号结束一行代码。如果没有分号，ECMAScript 就把折行代码的结尾看做该语句的结尾（与 Visual Basic 和 VBScript 相似），前提是这样没有破坏代码的语义。
-
-### 注释与 Java、C 和 PHP 语言的注释相同
-
-ECMAScript 借用了这些语言的注释语法。
+## 注释
 
 有两种类型的注释：
 
 + 单行注释以双斜杠开头（//）
 + 多行注释以单斜杠和星号开头（/*），以星号和单斜杠结尾（*/）
 
-### 括号表示代码块
+## 代码块和语句
 
-从 Java 中借鉴的另一个概念是代码块。
+C 语言采用`{}`来区分代码之间的层次，语句与语句之间可以加`;`，也可以不加
 
-代码块表示一系列应该按顺序执行的语句，这些语句被封装在左括号`{`和右括号`}`之间
+## 标识符
+
+标识符是用来标识变量、函数，或任何其他用户自定义项目的名称
+
++ 由英文字母，数字和下划线组成，但第一个字符不能是数字
++ 不能是 JavaScript 中的关键字和保留字
++ 区分大小写
+
+## 关键字和保留字
+
+关键字和保留字是 JavaScript 语言赋予特殊意义的字符
+
+## 变量
+
+通过关键字`var`声明，不需要显示声明变量的数据类型
+
+通过`=`运算符来为变量赋值
+
+::: danger
+ECMAScript 的解释程序遇到未声明过的标识符时，用该变量名创建一个全局变量，并将其初始化为指定的值，不过这样做非常危险
+:::
+
+## 数据类型
+
+1. Number
+2. String
+3. Boolean
+4. Undefined
+5. Null
