feat: some changes and updates

--- a/docs/language/c/4.md
+++ b/docs/language/c/4.md
@@ -6,11 +6,7 @@ time: 2019-03-06
 author: JQiue
 ---
 
-当程序中存储的数据过多，那么用变量来存储显然是非常糟糕的，因此 C 语言引进了数组，简而言之，就是一组`同类型`数据的`集合`，该集合中的各个数据项称为数组元素, 每个元素可用数组名和下标表示，一旦创建不可改变大小，必须通过数组的下标或索引来取出想要的元素，从0开始，这就说明数组元素在内存中是一个连续的地址
-
 ## 一维数组
-
-定义格式：数据类型 数组名[常量表达式]
 
 ```c
 int arr[3];
@@ -31,31 +27,21 @@ int arr2[3] = {3};
 int arr3[3];
 ```
 
-### 数组元素的引用
-
-格式：数组名[整型常量或整型表达式]
-
-```c
-int arr[3] = {1, 2, 6};
-arr[0];  // 1
-arr[1+1];  // 6
-```
-
-::: tip
-不能直接引用数组名
+::: danger 数组的越界访问
+C 语言不会检查数组的越界访问，使用数组索引范围之外的索引值并不会报错
 :::
 
-## 多维数组
+## 二维数组
 
 数组中的每一个元素也可以是一个数组，因此就有了多维数组的存在，最常用的是二维数组
 
-定义格式：数据类型 数组名[行列][数列]
-
-在二维数组中可以不用写行数，但列数必须写
-
 ```c
-int arr[][2];
+int arr[3][2];
 ```
+
+::: tip
+在二维数组中可以不用写行数，但列数必须写
+:::
 
 ## 字符串
 
