--- a/docs/language/js/1.md
+++ b/docs/language/js/1.md
@@ -17,7 +17,7 @@ author: JQiue
 
 ## 代码块和语句
 
-C 语言采用`{}`来区分代码之间的层次，语句与语句之间可以加`;`，也可以不加
+JavaScript 语言采用`{}`来区分代码之间的层次，语句与语句之间可以加`;`，也可以不加
 
 ## 标识符
 
