feat: some changes and updates

--- a/docs/algorithm/10.md
+++ b/docs/algorithm/10.md
@@ -2,3 +2,9 @@
 title: 线性表：队列
 author: JQiue
 ---
+
+只允许在一端进行插入，在另一端进行删除操作的线性表，又称之为先进先出（First In First Out）线性表
+
++ 队头：删除操作的一端
++ 队尾：插入操作的一端
++ 空队：不含任何数据元素的队
