--- a/docs/language/python/9.md
+++ b/docs/language/python/9.md
@@ -43,6 +43,10 @@ file = open(文件路径, 操作模式)
 + write()：写入字符串并返回字符串长度
 + writelines()：方法写入可迭代类型（元素必须是字符串类型）
 
+::: tip
+在 Windows 中，写入操作一定要注意编码问题，否则会出现写入乱码的情况，尽量在打开文件的时候指定文件编码
+:::
+
 ## 关闭文件
 
 不管是读还是写，都应该在最后调用该文件对象的 close 方法来关闭流，否则数据不会保留
@@ -50,6 +54,8 @@ file = open(文件路径, 操作模式)
 ```python
 file.close()
 ```
+
+每次都需要调用 close 方法来关闭文件未免繁琐，Python 提供了 with 关键字来解决文件的自动关闭操作
 
 ## 文件的指针
 
