--- a/docs/web/vue/1.md
+++ b/docs/web/vue/1.md
@@ -1,27 +1,43 @@
 ---
-title: 起步
+title: 介绍 && 起步
 category: 前端
 tag: Vue
 author: JQiue
 ---
 
-既然是框架，就必然需要导入使用，Vue提供了两种使用方式：
+Vue，Angular，React 一起被称为前端三大框架，Vue 是国人尤雨溪编写的一套前端框架解决方案，因此所有的资料都有中文支持，并且 Vue 整合了其他框架中的众多优点，大大降低了学习难度
 
-+ script标签导入
+Vue 是通过数据驱动来更新页面的，而无需手动操作 DOM 来更新，因此意味着只要将数据交给 Vue，Vue 就会自动将数据渲染到页面上，这也说明 Vue 是响应式的
 
-像jQuery那样使用[生产环境](https://cn.vuejs.org/js/vue.min.js)或[开发环境](https://cn.vuejs.org/js/vue.js)
+Vue 支持组件化开发，可以将网页上的内容拆分成一个独立的组件，通过拼装组件来构成一个完整的页面
 
-也可以使用官方提供的cdn
+![components](https://cn.vuejs.org/images/components.png)
+
+Vue 是基于 MVVM 设计模式来设计的，MVVM 由三部分组成：
+
+1. Model：数据模型和持久化抽象层，保存数据，处理数据业务逻辑
+2. View：视图层，展示数据，与用户交互
+3. ModelView：数据模型视图适配器，每一个 View 都会与 Model 中的属性一一对应
+
+MVVM 模式最大的特点就是支持数据的双向传递，在 Vue 中 View 就是页面，Model 就是 Vue 实例对象中的 data，而 View Model 就是 Vue 实例对象，Vue 默认是单向绑定的，只要将数据交给实例对象，实例对象就能够在视图中显示数据
+
+Vue 提供了两种使用方式：
+
++ script 标签导入
+
+像 jQuery 那样使用[生产环境](https://cn.vuejs.org/js/vue.min.js)或[开发环境](https://cn.vuejs.org/js/vue.js)
+
+也可以使用官方提供的 CDN
 
 ```javascript
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 ```
 
-+ 基于vue-cli脚手架使用
++ 基于 vue-cli 脚手架使用
 
-## 创建Vue实例
+## 创建 Vue 实例
 
-当使用script标签引入时，Vue被注册了一个全局变量，通过这个变量就能创造实例对象
+使用 script 标签引入时，Vue 被注册了一个全局变量，通过这个变量就能创造实例对象
 
 ```javascript
 let app = new Vue();
