--- a/docs/cs/compile/1.md
+++ b/docs/cs/compile/1.md
@@ -1,14 +1,22 @@
 ---
-title: 前端技术
+title: 走进编译原理 && 前端技术
 category: 计算机基础
 author: JQiue
 ---
+
+编译原理是一种研究翻译的技术，很多技术巨头的软件都具有二次编程的能力，比如 Office，CAD、Mathematica等，无论是哪个技术巨头，它们的核心能力都是拥有自己的语言和相关的生态，这都是编译技术带来的
+
+对于我个人来说，接触编译原理的初次想法就是：“我真的需要学习编译技术来写一门新的语言吗？”，直到我学了一段时间后，才发现我这种想法把编译原理的用途简单化了，在我用 Spring 时发现它对注解的支持和字节码的动态生成也属于编译技术，以及 Web 前端会使用一些模板引擎实现界面设计和代码相分离，这种模板甚至支持条件分支，循环等语法，形成更容易执行的前端代码
+
+但是我在学习这门技术时产生了很多问题，原因是市面上很多讲述编译原理的内容的书都过于抽象和理论化，也导致了我拿起书就很快放下了，简直成了我的心魔，在我看来，编译原理真的需要理论和实践相结合，以达到学以致用的程度
+
+## 前端技术
 
 这里的前端并不是指 Web 前端，而是指的是编译器对程序代码的分析和理解过程，它通常和语言的语法有关，跟目标机器无关，与之对应的就是后端，后端则是生成目标代码的过程，跟目标机器有关
 
 编译器的前端技术分为**词法分析、语法分析、语义分析**三个部分，主要涉及自动机和形式语言方面的基础
 
-## 词法分析
+### 词法分析
 
 编译器的第一项工作就是词法分析，像阅读文章一样，而文章是由一个个中文单词组成的，只不过在这里叫做“词法记号”，英文叫 Token，下面是个例子：
 
@@ -47,19 +55,19 @@ int main(void){
 
 词法分析器它分析整个程序的字符串，遇到不同字符，会驱使它迁移到不同的状态，比如扫描`age`时处于标识符状态，遇到`>`时处于操作符状态
 
-## 语法分析
+### 语法分析
 
 编译器下一个工作是语法分析，语法分析在词法分析的基础上识别出程序的语法结构，它是一个树状的结构，一个程序就是一棵树，叫做抽象语法树（Abstract Syntax Tree, AST），树的每个节点就是一个语法单元，层层的嵌套树状结构是人对程序的理解，因为程序总是一个结构嵌套另一个结构，大程序嵌套子程序，子程序又可包含子程序，对于一个表达式`1+2*3`的语法树是这样的：
 
 ::: center
-<img src="https://gitee.com/jqiue/img_upload/raw/master/images/compile_1.png"/>
+![compile](https://gitee.com/jqiue/img_upload/raw/master/images/compile_1.png)
 :::
 
 形成 AST 的作用就是让计算机更容易去处理，因为从根节点遍历整颗树就可以获得表达式的值，这些构造也可以通过程序实现，但是有几种实现的思路。一种思路是自上而下的进行分析，首先构造根节点，代表整个程序，之后向下扫描 Token 串，构建它的子节点，当遇到 int 类型的 Token 时，就已经知道遇到了变量声明语句，于是构建一个“变量声明”节点；接着遇到 age 并建立一个子节点，这是第一个变量，之后遇到 = ，意味着这个变量有初始值，那么建立一个初始化的子节点；最后遇到 45，这样一个树就扫描完毕了，程序退回到根节点，开始构建第二个子节点，一直递归扫描，直到构建成完整的树，这个算法叫递归下降算法（Recursive Descent Parsing）。与之对应的还有自底向上算法，这个算法会先将最下面的子节点识别出来，组装成上一级节点，一直到整个树组装完毕
 
 这些东西也是有大量的现成工具，比如 Yacc、JavaCC 等
 
-## 语义分析
+### 语义分析
 
 接下来的工作就是语义分析，对于计算机来说，就是让它理解我们真实意图，把一些模棱两可的地方消除掉，比如某个表达式计算结果时社么数据类型？如果数据类型不匹配，是否需要自动转换？一个代码块内外部有相同名称的变量，执行的时候应该用哪个？同一个作用域内不能有相同的变量，这是唯一性检查
 
