--- a/docs/web/vue/2.md
+++ b/docs/web/vue/2.md
@@ -5,24 +5,41 @@ tag: Vue
 author: JQiue
 ---
 
-vue通过模板语法来渲染前端页面，即把数据填充到html标签中
+Vue 通过模板语法来渲染 data 中的数据，即把数据填充到 html 标签中
 
 前端渲染的三种方式：
 
-1. 原生js字符串拼接，将数据以字符串的方式拼接到html标签中，缺点是不同的开发人员风格差异较大，后期难以维护
+1. 原生 JavaScript 字符串拼接，将数据以字符串的方式拼接到 html 标签中，缺点是不同的开发人员风格差异较大，后期难以维护
 2. 使用前端模板引擎，它拥有自己的一套模板语法规则，优点是开发人员都遵循同样的规则编写代码，方便了后期的维护，但是没有事件机制
-3. 使用vue特有的模板语法，包含插值表达式，指令，属性绑定，样式绑定，事件绑定，分支循环结构
+3. 使用 Vue 特有的模板语法，包含插值表达式，指令，属性绑定，样式绑定，事件绑定，分支循环结构
 
 ## 插值表达式
 
-插值表达式用于填充数据，在Vue中使用“Mustache”语法，即`{{}}`，该语法会自动将data对象中对应的property值绑定到插值除，当然如果数据发送改变，那么页面也会发生改变，毕竟Vue是响应式的
+插值表达式用于填充数据，在 Vue 中使用“Mustache”语法，即`{{}}`，该语法会自动将 data 对象中对应的 property 值绑定到插值处，如果数据发生改变，页面数据也会发生改变，因为 Vue 是响应式的
 
-如果以为插值表达式仅仅将数据绑定到页面那就太小看它了，由于Vue对模板语法提供了JavaScript表达式支持，这就意味着插值表达式中的JavaScript代码都会被解析，但仅仅只限于单个表达式
+由于 Vue 对模板语法提供了 JavaScript 表达式支持，插值表达式中的 JavaScript 代码都会被解析，但仅仅只限于单个表达式
 
 ## 指令
 
-Vue的指令本质就是自定义属性，就是带有`v-`前缀的特殊属性，由于Mustache语法不能作用在 HTML attribute 上，所以就无法控制Dom的行为，而通过指令，就可以影响Dom
+Vue 的指令本质就是自定义属性，就是带有`v-`前缀的特殊属性，由于 Mustache 语法不能作用在 HTML 属性（attribute） 上，无法控制 DOM 的行为，而通过指令，就可以影响 DOM
 
-### Class绑定
+::: demo 一个普通 Demo
 
-### Style绑定
+```html
+<h1>Mr.Hope</h1>
+<p><span id="very">十分</span> 帅</p>
+```
+
+```js
+document.querySelector("#very").addEventListener("click", () => {
+  alert("十分帅");
+});
+```
+
+```css
+span {
+  color: red;
+}
+```
+
+:::
