--- a/docs/web/vue/3.md
+++ b/docs/web/vue/3.md
@@ -5,7 +5,7 @@ tag: Vue
 author: JQiue
 ---
 
-因为Vue是基于MVVM设计模式实现的，所以也提供了双向数据传递，Vue中通过V-model指令来实现双向绑定，但只适用于`<input>`，`textarea`，`select`元素
+因为 Vue 是基于 MVVM 设计模式实现的，所以也提供了双向数据传递，Vue 中通过 v-model 指令来实现双向绑定，但只适用于`input`，`textarea`，`select`元素
 
 ```html
 <input type="text" v-model="">
@@ -36,3 +36,5 @@ export default {
 }
 </script>
 :::
+
+试着修改一下
