chore(deps): update deps

--- a/docs/language/js/1.md
+++ b/docs/language/js/1.md
@@ -3,6 +3,7 @@ title: 介绍 && 基本语法
 category: 编程语言
 tag: JavaScript
 author: JQiue
+prev: false
 ---
 
 膜拜一下作者`”Brendan Eich“`
@@ -71,13 +72,13 @@ ECMAScript 仅仅是一个描述，定义了脚本语言的所有属性、方法
 
 ## 使用方式
 
-1. 直接在HTML标签中使用
++ 直接在HTML标签中使用
 
 ```html
 <button onclick="alert('点我干嘛')">别点我!</button>
 ```
 
-2. 在页面的任意位置使用 script 标签插入 js 片段
++ 在页面的任意位置使用 script 标签插入 js 片段
 
 ```html
 <script type="text/javascript">
@@ -85,7 +86,7 @@ ECMAScript 仅仅是一个描述，定义了脚本语言的所有属性、方法
 </script>
 ```
 
-3. 引入外部js文件
++ 引入外部js文件
 
 ```html
 <script src= "index.js" type="text/javascript"></script>
