--- a/docs/basic/compile/1.md
+++ b/docs/basic/compile/1.md
@@ -2,6 +2,7 @@
 title: 走进编译原理 && 前端技术
 category: 计算机基础
 author: JQiue
+prev: false
 ---
 
 编译原理是一种研究翻译的技术，很多技术巨头的软件都具有二次编程的能力，比如 Office，CAD、Mathematica等，无论是哪个技术巨头，它们的核心能力都是拥有自己的语言和相关的生态，这都是编译技术带来的
