feat: updates some notes and changes

--- a/docs/ds_algorithm/algorithm/1.md
+++ b/docs/ds_algorithm/algorithm/1.md
@@ -20,3 +20,5 @@ article: false
 + 可读性：便于人们理解的算法，否则难以调试和修改
 + 健壮性：对于不合法的数据，也能够做出相关处理不会产生一些莫名其妙的结果
 + 高效性：执行时间短，占用存储空间低，时间和空间是衡量算法性能的重要指标
+
+解决问题的效率，不仅仅跟数据的组织方式有关，也和运行空间有关
