--- a/docs/web/css/1.md
+++ b/docs/web/css/1.md
@@ -63,11 +63,11 @@ CSS三大特性决定着元素的属性是如何生效的
 
 ### 层叠性
 
-层叠性是 CSS 处理冲突的一种能力，通常是同一个标签被选中多次并多次设置相同的属性，才会发生层叠性，CSS 全称就是层叠性样式表，由此可见一般
+层叠性是 CSS 处理冲突的一种能力，通常是同一个标签被选中多次并多次设置相同的属性，才会发生层叠性，这个时候优先级较高的就会生效，CSS 全称就是层叠性样式表，由此可见一般
 
 ### 继承性
 
-给父元素设置属性，后代元素也会被继承，并不是所有的属性都会被继承，以`color/font-/text-/line`开头的属性会被继承
+部分父元素的属性会被后代所继承，并不是所有的属性都会被继承，以`color/font-/text-/line`开头的属性会被继承
 
 ::: tip
 `<a>`标签中的下划线和颜色都不会继承，`<h>`标签的文字大小也不会继承
@@ -97,5 +97,5 @@ CSS三大特性决定着元素的属性是如何生效的
 4. 如果都一样，则按照优先级第二条处理
 
 ::: warning
-只有选择器直接选中的元素的才需要进行权重计算
+只有选择器直接选中的元素的才需要进行权重计算，间接选中的不算
 :::
