--- a/docs/web/html/2.md
+++ b/docs/web/html/2.md
@@ -294,6 +294,7 @@ HTML 提供了一些简单的文本格式化标签，无需写样式调整
 时间：<input type="time"><br>
 日期：<input type="month"><br>
 日期：<input type="date"><br>
+文件：<input type="file"><br>
 </form>
 ```
 
@@ -525,4 +526,8 @@ a 标签的内容不一定是文本，也可以是图片，也可以是其他的
 
 ## div
 
-在以前的 Web 开发中，页面逻辑并不复杂，用户的要求也不是很高，因此`<table>`标签被大量地运用到页面布局上，而`<table>`本质上就是一个展示数据的元素，用来做布局元素导致页面逻辑不够清晰，所以`<div>`标签是用来解耦这种行为的，这样页面更加清晰，代码组织更加合理，利于前端开发的分工合作。于是产生了“div + css”这种布局页面的模式，`<div>`就是用来做页面布局的容器元素的，本身没有任何语义
+在以前的 Web 开发中，页面逻辑并不复杂，用户的要求也不是很高，因此`<table>`标签被大量地运用到页面布局上，而`<table>`本质上就是一个展示数据的元素，用来做布局元素导致页面逻辑不够清晰，所以`<div>`标签是用来解耦这种行为的，这样页面更加清晰，代码组织更加合理，利于前端开发的分工合作。于是产生了“div + css”这种布局页面的模方式，`<div>`是一种容器级的标签，可以容纳任何内容，本身没有任何功能和样式
+
+## span
+
+`<span>`是一个文本级的容器标签，没有任何特殊功能以及样式，目的就是为包裹的文本来添加一些样式
