--- a/docs/web/webapi/4.md
+++ b/docs/web/webapi/4.md
@@ -175,7 +175,7 @@ ele.addEventListener('click', eventHandler, false);
 
 :::
 
-通过实验得知，鼠标无论点击到了哪一层元素，事件会从最该层开始依次向上层触发，DOM 事件模型分为捕获和冒泡，一个事件发生后，会在元素之间进行传播，这种传播分为三个阶段：
+通过实验得知，鼠标无论点击到了哪一层元素，事件会从该层开始依次向上层触发，DOM 事件模型分为捕获和冒泡，一个事件发生后，会在元素之间进行传播，这种传播分为三个阶段：
 
 + 捕获阶段：事件从最顶层开始向下传播的阶段
 + 目标阶段：真正目标节点正在处理事件的阶段
