--- a/docs/web/webapi/6.md
+++ b/docs/web/webapi/6.md
@@ -6,5 +6,50 @@ author: JQiue
 article: false
 ---
 
+客户端存储提供了网页能够将数据存储在浏览器上的技术，这有益于在弱网环境下的浏览体验，浏览器提供了一些 API 来实现了这种技术，当网络正常时就请求服务器获得数据，否则就访问本地存储中的数据
 
+## 本地存储和会话存储
 
+本地存储是一种将数据永久的存储在本地的技术，被浏览器当作 API 的方式提供，它是`window.localStorage`，只要为这个对象绑定一些自定义的属性就可以实现数据的存储，因为它是公共的，能被所有的网页程序进行读写
+
+```javascript
+window.localStorage.testData = '测试数据'
+console.log(window.localStorage.testData) // '测试数据'
+```
+
+对话存储针对一个会话进行数据存储，当网页被关闭时数据就会删除，不应该用于长期存储的应用，同时只会对当前页面公开，通过`window.sessionStorage`进行数据操作
+
+```javascript
+window.sessionStorage.testData = '测试数据'
+console.log(window.sessionStorage.testData) // '测试数据'
+```
+
+本地存储和会话存储的接口都会返回`Storage`类型，`Storage`的机制是通过键值对形式来存储的，他还有一些属性和方法来实现更强大的功能
+
++ `Storage.length`：返回键值对的数量
++ `Storage.key(index)`：根据索引返回 key
++ `Storage.getItem(key)`：根据 key 返回 value
++ `Storage.clear()`：删除所有的键值对
++ `Storage.removeItem(key)`：根据 key 删除指定的键值对
++ `Storage.setItem(key, value)`：添加新的键值对
+
+## Web SQL
+
+本地存储和会话存储虽然可以实现简单的对象存储，但是对于复杂的关系数据处理时，就力不从心了，在 HTML5 中新增了 Web SQL Database 关系型数据库，它是遵循 SQL 标准的，每一个遵循 Web SQL 的浏览器都会内嵌一个本地的 SQL 数据库
+
+```javascript
+/**
+ * openDatabase(databaseName, version, desc, estimatedSize)
+ * databaseName: 访问的数据库名称，如果没有就会创建
+ * version: 版本信息
+ * desc: 描述数据库的信息
+ * estimatedSize: 数据的大小
+ */
+var db = window.openDatabase('mydb', '1.0', '测试的数据库', 1024 * 1024);
+```
+
+## IndexedDB
+
+## Cookie
+
+## 缓存存储
