--- a/docs/ds_algorithm/ds/1.md
+++ b/docs/ds_algorithm/ds/1.md
@@ -11,11 +11,8 @@ article: false
 数据结构由两个词语组成，首先得说明数据是什么
 
 + 数据：数据是一个描述客观事物的符号，也是计算机能够操作的对象，能够被计算机识别并输入给计算机处理的符号集合，数值、文字、图像、音频、视频等都是一种数据，区别在于一个是数值类型和非数值类型，也可以这么说计算机中的数据无处不在
-
 + 数据元素：是组成数据的基本单位，通常被称之为一条记录，比如人类中的人本身就是一种数据元素
-
 + 数据项：一个数据元素由多个数据项组成，比如人有性别、年龄、身高等数据项，而数据项是最小的不可分割单位，但真正讨论问题的时候，并不会将数据项作为一个角度研究，往往将数据元素看作一个整体研究的着眼点
-
 + 数据对象：是相同性质的数据元素的集合
 
 ## 形式定义的数据结构
@@ -47,7 +44,7 @@ article: false
 
 + 顺序存储：把数据元素存放在连续的地址空间里，存储关系能够反映其逻辑关系，数组就是这种结构
 + 链式存储：把数据元素存放在任意的地址空间里，也可以是连续的，但是存储关系不能反映其逻辑关系，每一个数据元素还需要额外的空间来存储下一个数据元素的地址
-+ 索引存储：分别存放数据元素和元素之间的关系额存储方式
++ 索引存储：分别存放数据元素和元素之间的关系的存储方式
 + 散列存储：将数据元素的地址空间与关键码之间建立确定的对应关系的存储方式
 
 ::: tip
@@ -62,14 +59,11 @@ article: false
 
 ### 抽象数据类型
 
-抽象是指抽取事物中具有的普遍性的本质，抽出问题的特征而忽略非本质的细节，是一种思考方式，它隐藏了细节，只保留实现目标所必需的信息
+抽象是指抽取事物中具有的普遍性的本质，抽出问题的特征而忽略非本质的细节，是一种思考方式，它隐藏了细节，只保留实现目标所必需的信息，与存放数据的机器无关，与数据存储的物理结构无关，与实现操作的算法和编程语言无关，只关心数据和操作是什么，并不涉及如何实现
 
 对已有的数据类型进行抽象，就有了**抽象数据类型（Abstract Data Type，ADT）**
 
-一个 ADT 包含两个部分：
-
-1. 数据的声明
-2. 运算的声明
+一个 ADT 包含两个部分：数据的声明和运算的声明
 
 ```text
 ADT 抽象数据类型名
