--- a/docs/web/css/5.md
+++ b/docs/web/css/5.md
@@ -8,31 +8,104 @@ article: false
 
 ## 文档流
 
-网页的布局方式其实就是指浏览器是如何对网页中的元素进行排版的
-
-标准流也叫文档流，也是浏览器默认的排版方式
-
-会将元素分为块级元素/行内元素/行内块级元素
+网页的布局方式其实就是指浏览器是如何对网页中的元素进行排版的，标准流也叫文档流，也是浏览器默认的排版方式，会将元素分为块级元素/行内元素/行内块级元素
 
 ## 浮动流
 
-float属性是css最令人意外的属性，它的设计初衷只是用来实现文字环绕图片的效果，浮动流是一种“半脱离标准流”的排版方式，它只有水平排版这一种方式，它只能设置某个元素左对齐或右对齐，浮动流中是没有居中对齐的，同时也不能使用margin: 0 auto来实现居中对齐，同时它不区分块级元素/行内元素/行内块级元素，并且都可以设置宽高
+`float`是 CSS 中最令人意外的属性，它的设计初衷只是用来实现文字环绕图片的效果，浮动流是一种“半脱离标准流”的排版方式，它只有水平排版这一种方式，只能设置某个浮动元素左对齐或右对齐，浮动流中是没有居中对齐的，同时也不能使用`margin: 0 auto`来实现居中对齐，也不区分块级元素/行内元素/行内块级元素，且都可以设置宽高
 
-### 浮动流的脱标
+::: demo float
 
+```html
+<div class="float-box"><div class="float-example1"></div>当我年轻的时候，我梦想改变这个世界；当我成熟以后，我发现我不能够改变这个世界，我将目光缩短了些，决定只改变我的国家；当我进入暮年以后，我发现我不能够改变我们的国家，我的最后愿望仅仅是改变一下我的家庭，但是，这也不可能。当我现在躺在床上，行将就木时，我突然意识到：如果一开始我仅仅去改变我自己，然后，我可能改变我的家庭；在家人的帮助和鼓励下，我可能为国家做一些事情；然后，谁知道呢?我甚至可能改变这个世界。</div>
+<div class="float-box"><div class="float-example2"></div>当我年轻的时候，我梦想改变这个世界；当我成熟以后，我发现我不能够改变这个世界，我将目光缩短了些，决定只改变我的国家；当我进入暮年以后，我发现我不能够改变我们的国家，我的最后愿望仅仅是改变一下我的家庭，但是，这也不可能。当我现在躺在床上，行将就木时，我突然意识到：如果一开始我仅仅去改变我自己，然后，我可能改变我的家庭；在家人的帮助和鼓励下，我可能为国家做一些事情；然后，谁知道呢?我甚至可能改变这个世界。</div>
+```
+
+```css
+.float-box div {
+  width: 100px;
+  height: 50px;
+  background-color: red;
+}
+.float-example1 {
+  float: left;
+}
+.float-example2 {
+  float: right;
+}
+```
+
+:::
+
+::: tip
+浮动元素不会覆盖文字，图片，表单内容
+:::
+
+::: warning
 脱标即脱离标准流，当某一个元素浮动之后，这个元素看起来像是在标准流中删除了一样，如果前面的元素没有浮动，而后面的元素浮动了，这个时候后面的元素可以覆盖前面的元素，就说明了浮动流元素已经和标准流没有了任何关联，因此就不会占用了标准流的位置
-
 ![脱标](https://gitee.com/jqiue/img_upload/raw/master/images/647982-b2e928fbc09be335.png)
+:::
 
 ### 浮动流的贴靠
 
-前提知道的是，当浮动元素水平方向移动时，如果碰到含有边框或者另一个浮动元素就会停止移动，并贴靠在旁边，但是如果父元素的宽度不能够显示所有的浮动元素，那么会从最后一个元素开始贴靠，如果都不能显示，将会紧贴父元素的左边或者右边
+前提知道的是，当浮动元素水平方向移动时，如果碰到含有边框或者另一个浮动元素就会停止移动，并贴靠在旁边，如果父元素的宽度不能显示所有的浮动元素，那么会从最后一个元素开始贴靠，如果都不能显示，将会紧贴父元素的左边或者右边，浮动顺序会按照左浮动找左浮动，右浮动找右浮动的顺序进行贴靠
 
-![贴靠](https://gitee.com/jqiue/img_upload/raw/master/images/647982-696fc995e5ab5307.png)
+::: demo 贴靠现象
+
+```html
+<div class="float-box2">
+  <div class="float-a">a</div>
+  <div class="float-b">b</div>
+  <div class="float-c">c</div>
+  <div class="float-d">d</div>
+</div>
+<div class="float-box3">
+  <div class="float-h">h</div>
+  <div class="float-g">g</div>
+  <div class="float-f">f</div>
+  <div class="float-e">e</div>
+</div>
+```
+
+```css
+.float-box2,.float-box3 {
+  width: 350px;
+  height: 200px;
+  border: 1px solid #000;
+}
+.float-box2 div {
+  float: left;
+}
+.float-box3 div {
+  float: left;
+}
+.float-a,.float-e {
+  width: 100px;
+  height: 50px;
+  background-color: red;
+}
+.float-b,.float-f {
+  width: 100px;
+  height: 100px;
+  background-color: green;
+}
+.float-c,.float-g {
+  width: 100px;
+  height: 150px;
+  background-color: blue;
+}
+.float-d,.float-h {
+  width: 100px;
+  height: 50px;
+  background-color: pink;
+}
+```
+
+:::
 
 ### 清除浮动
 
-浮动元素会造成父元素高度坍塌的问题，这是因为浮动元素脱离了标准流，导致父元素无法检测到子元素而无法撑开高度，这时候可以给父元素添加属性触发BFC：
+浮动元素会造成父元素高度坍塌的问题，这是因为浮动元素脱离了标准流，导致父元素无法检测到子元素而无法撑开高度，这时候可以给父元素添加属性触发 BFC
 
 1. overflow：hidden
 2. display：table-cell
@@ -41,7 +114,7 @@ float属性是css最令人意外的属性，它的设计初衷只是用来实现
 5. postion：absolute
 6. ...
 
-由于触发了BFC，那么这个容器就是页面上完全独立的容器，为了不影响其他元素的布局，为了保证这个规则，会让子元素一起参与计算高度，变相的实现清除内部浮动的目的，但是有时候出于布局需要也有可能无法使用这些属性
+由于触发了 BFC，这个容器就是页面上完全独立的容器，为了不影响其他元素的布局以及保证这个规则，会让子元素一起参与计算高度，变相的实现清除内部浮动的目的，有时候出于布局需要可能无法使用这些属性
 
 解决高度坍塌常用的还有以下几种办法：
 
