feat: updates some notes and changes

--- a/docs/backend/nodejs/2.md
+++ b/docs/backend/nodejs/2.md
@@ -20,9 +20,12 @@ url 模块用于解析 URL 字符串
 
 ```javascript
 const url = require("url");
-str = "https://wjqis.me";
-url.parse(str) // 返回下面类似下面的对象
+url.parse("https://wjqis.me");
+```
 
+`parse()`会返回这样的对象：
+
+```javascript
 {
   protocol: 'http:',
   slashes: true,
@@ -42,7 +45,7 @@ url.parse(str) // 返回下面类似下面的对象
 + format(obj)：将一个 URL 对象转换为 URL 字符串
 
 ```javascript
-const obj = {
+const urlObj = {
   protocol: 'http:',
   slashes: true,
   auth: null,
@@ -56,7 +59,7 @@ const obj = {
   path: '/',
   href: 'http://wjqis.me/'
 }
-url.format(urlObject) // http://wjqis.me/
+url.format(urlObj) // http://wjqis.me/
 ```
 
 + resolve(from, to)：将一个 URL 字符串进行解析拼接，返回新的 URL 字符串
