--- a/docs/language/c/1.md
+++ b/docs/language/c/1.md
@@ -39,6 +39,8 @@ C 是一种编译型语言，如果使用过其他的编译型语言，则会很
 
 使用 C 语言编写程序时，内容通常保存在一个文本文件中，该文件被称为源代码文件，该文件通常以`.c`结尾，以便于编译器识别，编译器会将源文件转换成中间代码，也叫目标代码，虽然目标代码包含机器语言代码，但是缺少启动代码，启动代码是操作系统和程序之间的接口，同时目标代码缺少库函数，几乎所有的 C 程序都需要使用库函数，这个时候链接器会将目标代码，启动代码和库代码合并成一个可执行文件`.exe`
 
+## 安装编译器
+
 由于 C 编译器并不是 Windows 软件包中的一部分，需要从别处获取 C 编译器，一般在该操作系统上安装 [MinGW](http://www.mingw.org) 获取编译器，当然也可以使用集成开发环境，比如：Microsoft Visual C++ 6.0，Microsoft Visual Studio 等，大部分编译器都是 C 和 C++ 编译器的结合
 
 ## 第一个 C 语言程序
