--- a/docs/language/c/4.md
+++ b/docs/language/c/4.md
@@ -1,55 +1,85 @@
 ---
-title: 数组和字符串
+title: 结构体与联合体
 category: 编程语言
 tag: C
 author: JQiue
 article: false
 ---
 
-## 一维数组
+在实际情况中，单纯的用一个变量来描述一个对象是不够的，因为一个对象可以有多个属性，不可能只用一个变量描述，C 语言提供了结构体和共用体来解决这些复杂的数据类型
+
+## 结构体
+
+结构体是不同类型变量的集合，它跟数组相反，数组是相同类型的集合，通过关键字`struct`来声明一个结构体
 
 ```c
-int arr[3];
-float arr[5];
+struct obj {
+  char name[10];
+  int age;
+};
 ```
 
-### 数组的初始化
+然而这仅仅只是一个声明，实际上它的使用过程和声明变量一样，只不过是用自定义的类型来声明一个变量
 
-数组的初始化是在编译阶段进行的
-
-1. 完全初始化：即数组多长就给多少个初始化值
-2. 部分初始化：只给了少于数组长度的初始化值，没有被初始化的部分会被赋值为 0
-3. 没有初始化
+第一种定义方式
 
 ```c
-int arr1[3] = {1, 2, 6};
-int arr2[3] = {3};
-int arr3[3];
+int main(){
+  struct obj person;
+}
 ```
 
-::: danger 数组的越界访问
-C 语言不会检查数组的越界访问，使用数组索引范围之外的索引值并不会报错
-:::
-
-## 二维数组
-
-数组中的每一个元素也可以是一个数组，因此就有了多维数组的存在，最常用的是二维数组
+第二种定义方式，直接声明的同时定义，但是这样写就不能够通过该类型定义其他变量了
 
 ```c
-int arr[3][2];
+struct obj {
+  char name[10];
+  int age;
+}person;
+```
+
+### 初始化和访问成员
+
+结构体类型的初始化可以在定义的时候初始化，和数组有些类似，也可以通过`.`运算符来赋值初始化，`.`运算符也可以访问成员变量
+
+```c
+struct obj person = {"jqiue", 21}; // 声明变量时初始化
+person.name = "jqiue";  // 通过 . 运算符赋值
+printf("%s", person.name); // 通过 . 运算符访问
+```
+
+更妙的是，还可以通过结构体类型来定义一个数组，这个数组中每一个元素都是结构体类型
+
+```c
+struct obj persons[2] = {{"zs", 23}, {"ls", 24}};
+person[0].name; // 像数组那样通过下表访问每个结构体
+```
+
+### 结构体和指针
+
+既然结构体是用户自定义的数据类型，那么指针变量也能够指向结构体变量的地址
+
+```c
+struct obj *o; // 定义一个结构体指针
+o = &person; // 取出结构体变量的地址交给指针
+(*o).name; // 通过指针间接访问结构体成员，注意的是必须加上()，因为 . 运算符的优先级高于 * 运算符
+o->name;  // 为了解决上面的写法问题，C 语言提供了 -> 运算符来帮助简写，这和上面是等价的
 ```
 
 ::: tip
-在二维数组中可以不用写行数，但列数必须写
+结构体只是一个创建变量的模板，并不占用内存空间，而结构体中的变量才是真正存放数据的地方，需要空间来存储
 :::
 
-## 字符串
+## 共用体
 
-C 语言是不能定义字符串类型的，即只能通过一个个的字符序列来实现字符串，一般有两种格式
+共用体也叫联合体，通过关键字`union`来创建，它和结构体是类似的，区别在于共用体的变量成员是共用一块内存空间的，相对于结构体更节省内存空间，占用字节取决于成员变量中最长的哪个，但是也带了一个问题，修改了一个成员就会影响其他成员
 
-1. char 数组名[长度] = "字符串值";
-2. char 数组名[长度] = {'字符1','字符2','字符3',...,'\0'};
-
-通过观察发现字符串实际上是一个字符型数组来实现的，其中长度可以省略不写，且第二个方式最后一个元素必须是'\0'，它表示字符串的结束标识，并且不能够写中文，第一种可以写
-
-输出一个字符串通常使用`%s``，但更常用的是使用 puts 函数和 gets 函数来输出和输入字符串
+```c
+union data {
+  int a;
+  char b;
+}
+union data d;
+d.a = 3;
+d.b; // 实际上等于 d.a，所以输出的时候应该按照d.a的数据类型输出
+```
