--- a/docs/language/c/5.md
+++ b/docs/language/c/5.md
@@ -42,3 +42,29 @@ C语言还提供了一些预定义的宏
 可以像函数一样携带参数，但原则是一切都要括号，整个值也要括号，参数出现的每一个地方都要括号，也可以嵌套其他宏
 
 ## 条件编译
+
+## 标准库函数
+
+### stdlib.h
+
++ srand
+
++ rand
+
++ exit
+
++ system
+
+### string.h
+
++ strcpy
++ strcmp
++ strlen
+
+### math.h
+
++ ceil
++ floor
++ sqrt
++ pow
++ abs
