--- a/docs/web/html/1.md
+++ b/docs/web/html/1.md
@@ -6,15 +6,15 @@ author: JQiue
 article: false
 ---
 
-HTML 是 Hypertext Markup Language 的英文缩写，即超文本标记语言，它是一种标记语言而非编程语言，超文本的意思就是不仅仅是文字，还可以包含图片，链接，音乐，甚至程序等非文字元素，HTML 文件的后缀名是 `.html`
+HTML 是 Hypertext Markup Language 的英文缩写，即超文本标记语言，它是一种标记语言而非编程语言，超文本的意思就是不仅仅是文字，还可以包含图片，链接，音乐，甚至程序等非文字元素，HTML 文件的后缀名是 `.html`，在以前可能是`.htm`，这是因为操作系统的后缀名长度有限制
 
 ## 标签
 
 一个 HTML 文档由 HTML **标签**和**内容**构成，通过对标签的组织可以构造我们想要的网页表现形式和表现内容，标签一般有如下特点:
 
-1. 标签由两个左右尖括号`<>`包围的关键字组成，这些关键字不是程序员自己定义的
+1. 由两个左右尖括号`<>`包围的关键字组成，这些关键字不是程序员自己定义的
 2. 标签一般是成对出现，有开始标签和结束标签，但并不是全部的标签都是如此
-3. 普通标签必须闭合
+3. 普通标签应该闭合，虽然不闭合也不会报错
 4. 可以并列，也可以嵌套，必须是正确的嵌套关系
 5. 关键字对大小写不敏感，但 W3C 组织推荐小写
 
@@ -24,7 +24,7 @@ HTML 是 Hypertext Markup Language 的英文缩写，即超文本标记语言，
 
 ## 属性
 
-HTML 中的属性为元素提供附加的信息，不会被展示，以键值对形式出现，在 HTML5 中新增了全局属性的概念，所谓全局属性，是指可以对任何元素都可以使用的属性，
+HTML 中的属性为元素提供附加的信息，不会被展示，以键值对形式出现，在 HTML5 中新增了全局属性的概念，所谓全局属性，是指可以对任何元素都可以使用的属性
 
 + class：规定元素的类名
 + id：规定元素的唯一 id
@@ -32,32 +32,6 @@ HTML 中的属性为元素提供附加的信息，不会被展示，以键值对
 + style：规定元素的行内样式
 + lang：规定元素内容的语言
 + data-*：给予元素存储自定义属性的能力
-
-## 基本结构
-
-```html
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Document</title>
-  </head>
-  <body></body>
-</html>
-```
-
-一个html文档由四个基本部分组成：
-
-+ `<!DOCTYPE html>`：此声明必须位于的第一行，这是为了在不同的浏览器中尽可能得到一致的表现，但它不是 HTML 标签，不区分大小写
-+ `<html>`：它是所有 HTML 元素的根元素，页面的其他内容都会包裹于此元素之内
-+ `<head>`：此标签会提供一些与浏览器解析或者搜索引擎抓取等相关的信息，这些信息不会直接暴露给浏览者，除了`title`标签规定的标题（它规定了网页的标题）
-+ `<body>`：网页的主体部分，用户所能看到的页面都是它提供的
-
-1. title：规定网页的标题
-2. meta：给浏览器解析或者搜索引擎提供相关信息
-3. link：从外部引入 CSS 文件
-4. style：内部定义 CSS 代码
-5. script：从外部引入 js 文件或者直接定义 js 代码
-6. base: 为当前文档的所有链接设置基准链接
 
 ## 字符实体
 
@@ -120,6 +94,25 @@ HTML 中的属性为元素提供附加的信息，不会被展示，以键值对
 &times;| 乘号| `&times;`| `&#215;`
 &divide;| 除号| `&divide;`| `&#247;`
 
+## 基本结构
+
+一个html文档由四个基本部分组成：
+
++ `<!DOCTYPE html>`：此声明必须位于的第一行，这是为了在不同的浏览器中尽可能得到一致的表现，但它不是 HTML 标签，不区分大小写
++ `<html>`：它是所有 HTML 元素的根元素，页面的其他内容都会包裹于此元素之内
++ `<head>`：此标签会提供一些与浏览器解析或者搜索引擎抓取等相关的信息，这些信息不会直接暴露给浏览者，除了`title`标签规定的标题（它规定了网页的标题）
++ `<body>`：网页的主体部分，用户所能看到的页面都是它提供的
+
+```html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Document</title>
+  </head>
+  <body></body>
+</html>
+```
+
 ## 发展史
 
 1. 1993 年由互联网工程小组发布 HTML1.0
@@ -138,3 +131,24 @@ HTML 中的属性为元素提供附加的信息，不会被展示，以键值对
 2. 动态网页：取决于用户的参数
 
 网页无论多复杂，最终呈现在浏览者眼前的内容实质上都是由浏览器解析 HTML 代码后绘制出来的
+
+## 浏览器
+
+HTML 页面都是通过浏览器进行渲染的，不同的浏览器实现的标准不同，就导致同样的代码渲染出来的效果不一样
+
+### 常见的浏览器
+
+浏览器发展至今已经经历了无数竞争和淘汰了，浏览器最重要的部分是内核，像国内诸如：360，搜狗，百度，UC，猎豹等浏览器其实都是换皮浏览器，现在常见的浏览器内核有：
+
+1. IE（濒临淘汰，由于部分 PC 应用需要借助 IE 内核运行，因此被 Windows 一直保留至今）
+2. Firefox（火狐是 Mozilla 开发的一款开源浏览器，支持大部分标准）
+3. Safari（苹果公司开发的，只能在苹果设备上使用）
+4. Opera（不是一款开源浏览器，有点市场份额）
+5. Chrome（如今最多人使用的一款浏览器，大部分开发者都在使用）
+
+### 内核
+
+浏览器内核又分为两种：**渲染引擎和JS引擎**
+
+1. 渲染引擎：负责取得网页的内容（HTML、XML、图像等等）、整理讯息（例如加入 CSS 等），以及计算网页的显示方式，然后会输出至显示器或打印机。浏览器的内核的不同对于网页的语法解释会有不同，所以渲染的效果也不相同。所有网页浏览器、电子邮件客户端以及其它需要编辑、显示网络内容的应用程序都需要内核
+2. JavaScript 引擎：则是解析 Javascript 语言并执行
