--- a/docs/web/html/2.md
+++ b/docs/web/html/2.md
@@ -49,7 +49,7 @@ article: false
 :::
 
 ::: danger
-并不是代码换行浏览器就会解析换行，这取决于元素的表现形式，需要了解块级元素和行内元素
+并不是代码换行浏览器就会解析换行，浏览器会将换行符看作一个空格
 :::
 
 ## 文本格式化
@@ -84,14 +84,14 @@ HTML 提供了一些简单的文本格式化标签，无需写样式调整
 ::: demo img
 
 ```html
-<img src="http://p.ananas.chaoxing.com/star3/origin/522c96f46e7ef1f4c09607b6d9af7d44.png">
+<img src="/bgImage.png">
 ```
 
 :::
 
 ## 列表
 
-在 HTML 中，如果想表示数据的集合就应该使用列表元素，`<li>`是列表中的每一项
+如果想表示数据的集合就应该使用列表元素，`<li>`是列表中的每一项
 
 ### 有序列表
 
@@ -193,6 +193,10 @@ HTML 提供了一些简单的文本格式化标签，无需写样式调整
 
 :::
 
+::: tip
+HTML 表格默认没有边框和斑马纹，这是 markdown 转换成对应的 HTML 标签时增加的
+:::
+
 上面只是基本的表格结构，`<caption>`用来定义表格的标题，放在表格之内
 
 ::: demo 带表头的表格
@@ -253,7 +257,7 @@ HTML 提供了一些简单的文本格式化标签，无需写样式调整
 `<thead>`中没有使用`<td>`，而是使用`<th>`，这也是语义化的一部分，`<th>` 是一个特殊的`<td>`单元格，唯一的区别就是`<th>`中的字体会默认加粗
 :::
 
-综上所述，表格基本有如下几个标签构成
+综上所述，表格基本有如下几个标签构成：
 
 1. table 标签定义外部框架
 2. tr 标签定义行
@@ -413,7 +417,7 @@ a 标签的内容不一定是文本，也可以是图片，也可以是其他的
 ::: demo 图片链接
 
 ```html
-<a href="/web/html/1/" target="_blank"><img src="http://p.ananas.chaoxing.com/star3/origin/522c96f46e7ef1f4c09607b6d9af7d44.png"></a>
+<a href="/web/html/1/" target="_blank"><img src="/bgImage.png"></a>
 ```
 
 :::
