--- a/docs/language/c/2.md
+++ b/docs/language/c/2.md
@@ -127,9 +127,13 @@ pi = 3.1415; // error，常量是不可以被修改的
 \\|斜杠
 \'|单引号
 \"|双引号
-\ddd|1-3 位 8进制表示的字符（只需用数字替换d）
+\ddd|1-3 位 8进制表示的字符（用数字替换d）
 \xhh|1-2 位 16进制表示的字符（x是固定的只需用数字替换h）
 :::
+
+### 类型检测
+
+C 语言可以使用`sizeof`来判断数据类型
 
 ### 类型转换
 
@@ -148,6 +152,55 @@ printf("bar = %d", bar); // 输出 0
 ::: tip
 对于 printf() 函数来说，任何小于 int 类型的都会被转换成 int，float 会被自动转换为 double，但是 scanf() 函数不会，scanf() 必须要知道输入的数据类型，比如 short，就要用 %hd
 :::
+
+## 运算符
+
+### 常见运算符
+
+运算符|描述
+---|---
++|相加
+-|相减
+*|相乘
+/|相除
+%|取余
+==|判断相等
+!=|判断不相等
+\>|判断左操作数是否大于右操作数
+<|判断左操作数是否小于右操作数
+\>=|判断左操作数是否大于等于右操作数
+<=|判断左操作数是否小于等于右操作数
+&&|逻辑与，两个操作数都非0，则为真
+\|\||逻辑或，两个操作数有一个非0，则为真
+!|逻辑非，逆转操作数的逻辑状态，真则为假，假则为真
+=|赋值运算符
++=|加且赋值运算符，右操作数和左操作数相加并赋值给左操作数
+-=|减且赋值运算符，右操作数和左操作数相减并赋值给左操作数
+*=|乘且赋值运算符，右操作数和左操作数相乘并赋值给左操作数
+/=|除且赋值运算符，右操作数和左操作数相除并赋值给左操作数
+&|取地址运算符
+*|取引用的对象运算符
+,|从左往右计算，将最右边的结果返回
+
+::: tip
+关系运算符和逻辑运算符都会产生 0 或 1 ，在 C 语言中，任何非 0 的值就为真
+:::
+
+### 三元运算符
+
+三元运算符是一种条件运算，即通过`?`来构成条件选择，和`if else`差不多，如果满足就执行第一个结果，否则就执行另外一个结果
+
+```c
+int a = 3, b = 4, c;
+c = a > b ? 5 : 6; // 如果 a 大于 b 为真，则将执行第一个表达式，否则执行另一个表达式
+```
+
+### 优先级和结合性
+
+优先级决定谁先计算，结合性指的是当算子两边的运算符优先级别相同时，则按照结合性来确定表达式谁先计算
+
++ ! > 算数 > 关系 > 逻辑 > 赋值
++ 单目 > 双目
 
 ## 流程控制
 
@@ -304,73 +357,6 @@ for (表达式 1;判断条件;表达式 2){
 + 当遇到`break`语句时，立即退出离`break`语句最近的一层循环，不继续下一次循环
 + 当遇到`continue`语句时，立即退出当前次循环，继续下一次循环
 
-## 运算符
-
-运算符是指进行运算的动作，参与运算的值被称为算子，可能是常数，变量，也可能是一个方法的返回值
-
-+ 按照功能划分
-  + 括号运算符
-  + 算术运算符
-  + 关系运算符
-  + 逻辑运算符
-  + 赋值运算符
-  + 复合运算符
-  + 位运算符
-  
-+ 按照参与运算的操作数个数划分
-  + 单目运算
-  + 双目运算
-  + 三目运算
-
-### 常见运算符
-
-算数运算符提供了数学中的基本运算功能
-
-运算符|描述
----|---
-+|相加
--|相减
-*|相乘
-/|相除
-%|取余
-==|判断相等
-!=|判断不相等
-\>|判断左操作数是否大于右操作数
-<|判断左操作数是否小于右操作数
-\>=|判断左操作数是否大于等于右操作数
-<=|判断左操作数是否小于等于右操作数
-&&|逻辑与，两个操作数都非0，则为真
-\|\||逻辑或，两个操作数有一个非0，则为真
-!|逻辑非，逆转操作数的逻辑状态，真则为假，假则为真
-=|赋值运算符
-+=|加且赋值运算符，右操作数和左操作数相加并赋值给左操作数
--=|减且赋值运算符，右操作数和左操作数相减并赋值给左操作数
-*=|乘且赋值运算符，右操作数和左操作数相乘并赋值给左操作数
-/=|除且赋值运算符，右操作数和左操作数相除并赋值给左操作数
-&|取地址运算符
-*|取引用的对象运算符
-,|从左往右计算，将最右边的结果返回
-
-::: tip
-关系运算符和逻辑运算符都会产生 0 或 1 ，在 C 语言中，任何非 0 的值就为真
-:::
-
-### 三元表达式
-
-三元运算符是一种条件运算，即通过`?`来构成条件选择，和`if else`差不多，如果满足就执行第一个结果，否则就执行另外一个结果
-
-```c
-int a = 3, b = 4, c;
-c = a > b ? 5 : 6; // 如果 a 大于 b 为真，则将执行第一个表达式，否则执行另一个表达式
-```
-
-### 优先级和结合性
-
-优先级决定谁先计算，结合性指的是当算子两边的运算符优先级别相同时，则按照结合性来确定表达式谁先计算
-
-+ ! > 算数 > 关系 > 逻辑 > 赋值
-+ 单目 > 双目
-
 ## 函数
 
 C 语言源程序是由函数组上程序往往由多个函数组成，由主成的，一个程序中有且只有一个主函数`main`，它是程序的入口（开始）和出口（结束），但实际函数调用其他函数，其他函数也可以互相调用，函数是源程序的基本模块，C 语言的函数本质是一个复合语句，用来执行一个**语句序列**。C 语言虽然提供了大量的库函数，但是仍然满足不了一些开发中的逻辑，这就需要用户自定义函数的功能
@@ -439,3 +425,148 @@ int sub(int a, int b){
 ::: danger
 声明原型的时候参数可以只写数据类型，如果写了标识符，后面实现函数中的标识符必须一样
 :::
+
+## 数组
+
+```c
+int arr[3];
+float arr[5];
+```
+
+数组的初始化是在编译阶段进行的
+
+1. 完全初始化：即数组多长就给多少个初始化值
+2. 部分初始化：只给了少于数组长度的初始化值，没有被初始化的部分会被赋值为 0
+3. 没有初始化
+
+```c
+int arr1[3] = {1, 2, 6};
+int arr2[3] = {3};
+int arr3[3];
+```
+
+::: danger 数组的越界访问
+C 语言不会检查数组的越界访问，使用数组索引范围之外的索引值并不会报错
+:::
+
+### 二维数组
+
+数组中的每一个元素也可以是一个数组，因此就有了多维数组的存在，最常用的是二维数组
+
+```c
+int arr[3][2];
+```
+
+::: tip
+在二维数组中可以不用写行数，但列数必须写
+:::
+
+## 字符串
+
+C 语言是不能定义字符串类型的，即只能通过一个个的字符序列来实现字符串，一般有两种格式
+
+1. char 数组名[长度] = "字符串值";
+2. char 数组名[长度] = {'字符1','字符2','字符3',...,'\0'};
+
+通过观察发现字符串实际上是一个字符型数组来实现的，其中长度可以省略不写，且第二个方式最后一个元素必须是'\0'，它表示字符串的结束标识，并且不能够写中文，第一种可以写
+
+输出一个字符串通常使用`%s``，但更常用的是使用 puts 函数和 gets 函数来输出和输入字符串
+
+## 枚举类型
+
+枚举类型是 C 语言提供的一种特殊类型，通常用于一些有限值范围的类型，用`enum`关键字声明，必须在函数外部定义，每一个取值都会被当作一个只读变量，默认第一个变量的取值为 0，之后的每一个变量取值会依次递增，如果给某一个位置的成员主动赋值，之后的每一个变量会在这个取值的基础上自增
+
+```c
+enum en{
+  foo,
+  bar
+};
+int main(void){
+  printf("%d", foo); // 0
+  printf("%d", bar); // 1
+  return 0;
+}
+```
+
+对于枚举类型的成员来说，只能在定义的时候赋值，且只能够赋值整型数据，也可以是字符型（因为字符型在内存中是以数字存储的），访问成员时也只需要使用成员标识符即可
+
+也可以通过枚举类型来定义一个普通变量或指针变量，普通变量也是只读的，最好在定义是初始化，否则会是一个垃圾数据
+
+```c
+enum en{
+  foo,
+  bar
+};
+int main(){
+  enum en baz = 1;
+  enum en *qux = &baz;
+  printf("%d", baz); // 1
+  printf("%d", &qux); // 1
+  return 0;
+}
+```
+
+## 输入和输出
+
+必须引入`stdio.h`头文件
+
++ printf
+
+printf 常用于打印一些信息到屏幕上，是使用的最频繁的函数，也叫做**格式化输出函数**。它会将接收的一个字符串参数打印到屏幕上
+
+```c
+printf("2"); // 2
+```
+
+它通常和格式化占位符搭配使用来实现不同字符串的打印
+
+```c
+printf("今年我%d岁还单身", 18); // 今年我18岁还单身
+```
+
+会发现`18`将`%d`给替换了，这个`%d`就是格式化占位符中的一种，这说明`printf`第一个参数之外的参数都可以通过占位符来替换第一个参数中指定的部分，他们都是按顺序的
+
+```c
+printf("余额宝今日又增加了%d的收益", 0.01); // 余额宝今日又增加了1202590843的收益
+printf("余额宝今日又增加了%f的收益", 0.01); // 余额宝今日又增加了0.010000的收益
+```
+
+在上面这个例子中，很显然`%d`不能够帮浮点数正确的显示，而`%f`可以，这说明不同的数据类型应使用不同的格式化占位符，下面是一些常用的格式化占位符：
+
+类型|含义
+---|---
+d|整数
+f|单，双精度浮点(带有 6 位小数)
+o|无符号八进制
+x|无符号十六进制
+c|字符
+s|字符串
+p|地址
+
+然而这只是占位符中的一种用法，占位符还可以决定数据如何显示，比如控制小数点位数：
+
+```c
+printf("余额宝今日又增加了%.2f的收益", 0.01); // 余额宝今日又增加了0.01的收益
+```
+
+控制字符输出宽度：
+
+```c
+printf("今年我%5d岁还单身", 18); // 今年我   18岁还单身
+printf("今年我%-5d岁还单身", 18); // 今年我18   岁还单身
+printf("今年我%05d岁还单身", 18); // 今年我00018岁还单身
+printf("余额宝今日又增加了%4.2f的收益", 0.01); // 余额宝今日又增加了0.01的收益
+printf("余额宝今日又增加了%5.2f的收益", 0.01); // 余额宝今日又增加了 0.01的收益
+printf("余额宝今日又增加了%-5.2f的收益", 0.01); // 余额宝今日又增加了0.01 的收益
+printf("余额宝今日又增加了%05.2f的收益", 0.01); // 余额宝今日又增加了000.01的收益
+```
+
+`%`后面不仅可以指定类型，精度，也可以指定宽度，当输出的位数小于指定宽度时会在左边使用空格补齐，输出的位数大于指定宽度会按原样输出，如果给宽度指定`-`，则会从右边补齐空格。也可以指定`0`来补齐，只适用不加`-`的情况下
+
++ scanf
+
++ getchar
+
++ putchar
+
+### 格式化输出
