--- a/docs/language/c/3.md
+++ b/docs/language/c/3.md
@@ -1,94 +1,65 @@
 ---
-title: 常用库函数
+title: 指针
 category: 编程语言
 tag: C
 author: JQiue
 article: false
 ---
 
-C 语言通过[头文件](5/#宏定义)提供了大量的库函数供使用
+指针是 C 语言的灵魂，也可以说指针就是 C 语言的门面，指针简单来说就是一种特殊的变量，和普通变量不同的是，指针变量存储的是另一个变量的地址，而普通变量存储的只是一个实际的值，站在内存的角度来看，通过地址就能访问数据，那么指针也就能间接访问某个变量中的数据
 
-## stdio.h
-
-+ printf
-
-printf 常用于打印一些信息到屏幕上，是使用的最频繁的函数，也叫做**格式化输出函数**。它会将接收的一个字符串参数打印到屏幕上
+定义一个指针变量和定义一个普通变量一样，只不过前面要加上`*`来表示它是一个指针变量，当然指针也是具有类型的，不同类型的变量要用不同的类型的指针
 
 ```c
-printf("2"); // 2
+int *p;
 ```
 
-它通常和格式化占位符搭配使用来实现不同字符串的打印
+指针变量有了，那么如何取出其他变量的地址呢？
+
+通过`&`运算符就可以取出某个变量的地址，将地址赋值给指针变量就行了
 
 ```c
-printf("今年我%d岁还单身", 18); // 今年我18岁还单身
+int *p;
+int a = 3;
+p = &a; // 取出变量a的地址交给指针p
 ```
 
-会发现`18`将`%d`给替换了，这个`%d`就是格式化占位符中的一种，这说明`printf`第一个参数之外的参数都可以通过占位符来替换第一个参数中指定的部分，他们都是按顺序的
+::: tip
+& 运算符的操作数必须是变量，取出来的地址大小取决于编译器和系统架构
+:::
+
+这个指针已经指向了那个变量，就可以通过`*`运算符来访问数据
 
 ```c
-printf("余额宝今日又增加了%d的收益", 0.01); // 余额宝今日又增加了1202590843的收益
-printf("余额宝今日又增加了%f的收益", 0.01); // 余额宝今日又增加了0.010000的收益
+printf("%d", *p); // 通过指针访问上述code中变量存储的数据
+printf("%d", a); // 它和指针访问是等效的
 ```
 
-在上面这个例子中，很显然`%d`不能够帮浮点数正确的显示，而`%f`可以，这说明不同的数据类型应使用不同的格式化占位符，下面是一些常用的格式化占位符：
+::: tip
+定义变量时的`*`和表达式中的`*`是不同的
+:::
 
-类型|含义
----|---
-d|整数
-f|单，双精度浮点(带有 6 位小数)
-o|无符号八进制
-x|无符号十六进制
-c|字符
-s|字符串
-p|地址
+## 指针的运算
 
-然而这只是占位符中的一种用法，占位符还可以决定数据如何显示，比如控制小数点位数：
+指针变量的运算实际上是地址的运算，C 语言规定一个地址加上或减去一个整数 n，其运算结果仍然是一个地址
+
+## 数组与指针
+
+数组本身就表达地址，因此数组的地址不需要用`&`取出，但数组的元素表达的是变量，需要使用取地址符
+
+因此`[]`运算符可以对数组变量做，也可以对指针变量做
+
+如果把一个数组当作参数传递给一个函数，这个函数接收的也是一个指针，所以要定义指针变量接收
 
 ```c
-printf("余额宝今日又增加了%.2f的收益", 0.01); // 余额宝今日又增加了0.01的收益
+int foo(int *arr){
+  return 0;
+}
+int main(){
+  int arr[3] = {1, 2, 3};
+  int *p;
+  p = arr; // 数组名即指针地址
+  foo(arr); // 接收数组时，需要在函数中定义指针变量接收
+  return 0;
+}
 ```
-
-控制字符输出宽度：
-
-```c
-printf("今年我%5d岁还单身", 18); // 今年我   18岁还单身
-printf("今年我%-5d岁还单身", 18); // 今年我18   岁还单身
-printf("今年我%05d岁还单身", 18); // 今年我00018岁还单身
-printf("余额宝今日又增加了%4.2f的收益", 0.01); // 余额宝今日又增加了0.01的收益
-printf("余额宝今日又增加了%5.2f的收益", 0.01); // 余额宝今日又增加了 0.01的收益
-printf("余额宝今日又增加了%-5.2f的收益", 0.01); // 余额宝今日又增加了0.01 的收益
-printf("余额宝今日又增加了%05.2f的收益", 0.01); // 余额宝今日又增加了000.01的收益
-```
-
-`%`后面不仅可以指定类型，精度，也可以指定宽度，当输出的位数小于指定宽度时会在左边使用空格补齐，输出的位数大于指定宽度会按原样输出，如果给宽度指定`-`，则会从右边补齐空格。也可以指定`0`来补齐，只适用不加`-`的情况下
-
-+ scanf
-
-+ getchar
-
-+ putchar
-
-## stdlib.h
-
-+ srand
-
-+ rand
-
-+ exit
-
-+ system
-
-## string.h
-
-+ strcpy
-+ strcmp
-+ strlen
-
-## math.h
-
-+ ceil
-+ floor
-+ sqrt
-+ pow
-+ abs
