--- a/docs/language/js/1.md
+++ b/docs/language/js/1.md
@@ -7,13 +7,15 @@ prev: false
 article: false
 ---
 
-仅仅只是 HTML 和 CSS 写出来的网页是没有灵魂的，无法和用户交互行为，JavaScript 就是用来解决交互问题的，为了发挥 JavaScript 的全部潜力，了解它的本质、历史及局限性是十分重要的，作为万维网前端最重要的编程语言，JavaScript 的出现使网页和用户之间实现了实时和动态的交互关系，所有的浏览器都嵌入了 JavaScript 解释引擎。
+作为万维网前端最重要的编程语言，JavaScript 的出现使网页和用户之间实现了实时和动态的交互关系，所有的浏览器都嵌入了 JavaScript 解释引擎
+
+JavaScript 在刚诞生时，它的名字叫做“LiveScript”，在当时 Java 很流行，所以决定将它命名为 Java 的“弟弟”会有助于它流行，现在 JavaScript 完全成为了一门独立的语言，也拥有了自己的语言规范 ECMAScript
 
 ECMAScript 通常被称为 JavaScript，但是后者为更多开发者所认知，但真正的标准是 ECMAScript，而 JavaScript 只是它其中的一个实现，大部分浏览器厂商都有自己的 ECMAScript 标准实现，比如谷歌的 V8，苹果的 JavaScriptCore，Mozilla 的 JavaScript，学习 JavaScript，实际上学习的是 ECMAScript
 
 ECMAScript 从发布标准至今已经迭代到了 ES6，很多新特性都是在这个版本中添加的，但事到如今还没有出现完全支持 ES6 的运行环境，导致开发者为了体验新特性需将 ES6 转换为 ES5
 
-## 运行环境
+## 浏览器中的 JavaScript
 
 JavaScript 有局限性，不能够编写独立运行的程序，因此 JavaScript 只能在某个解释引擎或宿主上运行，[浏览器](/web/other/1/)就是 JavaScript 的宿主。JavaScript 有两种运行方式，一种是直接在浏览器的开发者工具中控制台直接输入代码执行，另一种在 HTML 文档中嵌入 JavaScript 代码执行
 
