--- a/docs/web/css/3.md
+++ b/docs/web/css/3.md
@@ -46,9 +46,7 @@ px 是一种尺寸单位，在浏览器中字体的默认大小为 16px
 对于英文字体来说是处理不了中文的，而中文字体是可以处理英文字体的。只要将英文字体写在中文字体前就可以实现分别设置字体
 :::
 
-### 简写形式
-
-这些属性都可以直接通过`font`来简写，取值之间使用空格分隔
+这些属性都可以直接通过`font`来简写，取值之间使用空格分隔，不需要写出所有的取值，但必须按照顺序
 
 ::: demo font 简写形式
 
@@ -62,7 +60,7 @@ px 是一种尺寸单位，在浏览器中字体的默认大小为 16px
 
 ### 装饰
 
-通过`text-decoration`属性来规定文本的一些装饰样式
+`text-decoration`可以设置文本的一些装饰样式
 
 ::: demo text-decoration
 
@@ -77,7 +75,7 @@ px 是一种尺寸单位，在浏览器中字体的默认大小为 16px
 
 ### 水平对齐
 
-通过`text-align`属性来规定文本的水平对齐方式
+`text-align`可以规定文本的水平对齐方式
 
 ::: demo text-align
 
@@ -90,6 +88,8 @@ px 是一种尺寸单位，在浏览器中字体的默认大小为 16px
 :::
 
 ### 缩进
+
+`text-indent`可以控制文本的首行缩进距离
 
 ::: demo text-indent
 
@@ -105,14 +105,14 @@ em 是一种相对尺寸的单位，默认为当前文本的字体尺寸
 
 ### 颜色
 
-通过`color`属性就可以改变文本的颜色
+`color`属性可以改变文本的颜色
 
 ::: demo color
 
 ```html
-<span style="color:red">红色</span>
-<span style="color:green">绿色</span>
-<span style="color:blue">蓝色</span>
+<span style="color:red">红</span>
+<span style="color:green">绿</span>
+<span style="color:blue">蓝</span>
 ```
 
 :::
@@ -139,7 +139,7 @@ em 是一种相对尺寸的单位，默认为当前文本的字体尺寸
 
 :::
 
-+ `background-image`：设置背景图片，必须提供图片地址并放在`url()`中，如果图片的大小没有元素大，则会自动在水平和垂直方向平铺和填充背景
++ `background-image`：设置背景图片，必须提供图片地址并放在`url()`中，如果图片大小没有元素大，则会自动在水平和垂直方向平铺和填充背景
 
 ::: demo background-image
 
@@ -153,10 +153,10 @@ em 是一种相对尺寸的单位，默认为当前文本的字体尺寸
   height: 100px;
 }
 .foo {
-  background-image: url(https://gitee.com/jqiue/img_upload/raw/master/images/avatar50.png);
+  background-image: url(/avatar.png);
 }
 .bar {
-  background-image: url(http://p.ananas.chaoxing.com/star3/origin/522c96f46e7ef1f4c09607b6d9af7d44.png);
+  background-image: url(/bgImage.png);
 }
 ```
 
@@ -179,7 +179,7 @@ em 是一种相对尺寸的单位，默认为当前文本的字体尺寸
 ```css
 .box {
   height: 100px;
-  background-image: url(https://gitee.com/jqiue/img_upload/raw/master/images/avatar50.png);
+  background-image: url(/avatar.png);
 }
 .foo {
   background-repeat: repeat-x;
@@ -194,9 +194,9 @@ em 是一种相对尺寸的单位，默认为当前文本的字体尺寸
 
 :::
 
-+ `background-position`：设置背景图片的在元素中的位置，默认情况下总是显示在元素的左上角，属性有两个取值，前面控制水平方向，后面控制垂直方向。像素可以精准的控制图片的位置，它的取值可以是负的
-  + 水平方向：`left``center``right`|像素
-  + 垂直方向：`top``center``bottom`|像素
++ `background-position`：设置背景图片的在元素中的位置，默认情况下总是显示在元素的左上角，属性有两个取值，前面控制水平方向，后面控制垂直方向。也可以通过像素精准的控制图片的位置，它的取值可以是负的
+  + 水平方向：`left`，`center`，`right`|像素
+  + 垂直方向：`top`，`center`，`bottom`|像素
 
 ::: demo background-position
 
@@ -213,7 +213,7 @@ em 是一种相对尺寸的单位，默认为当前文本的字体尺寸
   width: 99px;
   height: 99px;
   background-color: pink;
-  background-image: url(https://gitee.com/jqiue/img_upload/raw/master/images/avatar50.png);
+  background-image: url(/avatar.png);
   background-repeat: no-repeat;
 }
 .foo {
@@ -233,10 +233,8 @@ em 是一种相对尺寸的单位，默认为当前文本的字体尺寸
 可以同时设置背景颜色和图片，图片会在颜色的上面
 :::
 
-+ background-attachment：设置背景图片是否固定或者随着页面的其余部分滚动，`scroll`是默认属性随着页面的滚动而滚动，`fixed`则不会随着滚动
-+ background-size:
-
-### 缩写形式
++ background-size：设置背景图片的大小，可以通过像素取值，也可以通过`cover`或`contain`来自动计算图片大小覆盖背景
++ background-attachment：设置背景图片是否固定或者随着页面的其余部分滚动，`scroll`是默认属性随着页面的滚动而滚动，`fixed`则不会随着页面而滚动
 
 上面都是一些单独的属性，CSS 也提供了`background`属性进行缩写：`background: 背景颜色 背景图片 平铺方式 固定方式 定位方式`，在缩写方式中，任何属性都可以省略
 
@@ -244,49 +242,17 @@ em 是一种相对尺寸的单位，默认为当前文本的字体尺寸
 插入图片的语义比背景图片的要强，利于搜索引擎收录
 :::
 
-### 精灵图
+### 精灵图技术
 
 精灵图也叫雪碧图，是一种图片的合成技术，目的是将很多图片拼接到一张图片中，利用 CSS 背景定位来显示所需要的图片，大大的减少了网页中的请求次数
 
-![spider](https://gitee.com/jqiue/img_upload/raw/master/images/spider.png)
-
-::: demo 精灵图
-
-```html
-<div class="box foo"></div>
-<div class="box bar"></div>
-<div class="box quz"></div>
-<div class="box qux"></div>
-```
-
-```css
-.box{
-  display: inline-block;
-  border: 1px solid pink;
-  width: 100px;
-  height: 100px;
-  background: url(https://gitee.com/jqiue/img_upload/raw/master/images/spider.png) no-repeat;
-}
-.bar {
-  background-position: -138px 0px;
-}
-.quz {
-  background-position: -138px -140px;
-}
-.qux {
-  background-position: 0px -140px;
-}
-```
-
-:::
-
 ## 转换
 
-在 CSS3 中，通过转换属性能够对元素进行移动，缩放，旋转，拉长或拉伸
+在 CSS3 中，转换属性能够对元素进行移动，缩放，旋转，拉长或拉伸
 
 ### 2D 转换
 
-通过 transform 属性来控制元素的转换行为，它的取值是转换方法
+通过`transform`属性来控制元素的转换行为，它的取值是转换方法
 
 + translate(x,y)：水平或垂直方向平移
 + rotate(angle)：顺时针或逆时针旋转
