fix: fixed some errors

--- a/docs/web/css/3.md
+++ b/docs/web/css/3.md
@@ -156,7 +156,7 @@ em 是一种相对尺寸的单位，默认为当前文本的字体尺寸
   background-image: url(/avatar.png);
 }
 .bar {
-  background-image: url(/bgImage.png);
+  background-image: url(/bgImage.jpg);
 }
 ```
 
