--- a/docs/web/html/2.md
+++ b/docs/web/html/2.md
@@ -84,7 +84,7 @@ HTML 提供了一些简单的文本格式化标签，无需写样式调整
 ::: demo img
 
 ```html
-<img src="/bgImage.png">
+<img src="/bgImage.jpg">
 ```
 
 :::
@@ -417,7 +417,7 @@ a 标签的内容不一定是文本，也可以是图片，也可以是其他的
 ::: demo 图片链接
 
 ```html
-<a href="/web/html/1/" target="_blank"><img src="/bgImage.png"></a>
+<a href="/web/html/1/" target="_blank"><img src="/bgImage.jpg"></a>
 ```
 
 :::
